--- a/_posts/develop/ds_ai/2025-03-23-al5.md
+++ b/_posts/develop/ds_ai/2025-03-23-al5.md
@@ -296,20 +296,21 @@ void merge2(index low, index mid, index high) {
 <br>
 
 **[ 시간 복잡도 ]**<br>
-`Partition의 시간복잡도` 입력 배열의 크기에 따라 $T(n) = n - 1$ (피벗 빼고 나머지 비교)
+`Partition의 시간복잡도` <br>
+입력 배열의 크기에 따라 $T(n) = n - 1$ (피벗 빼고 나머지 비교)
 
 `최악의 경우 시간 복잡도`<br>
-피벗이 항상 가장 작거나, 가장 큰 값일 경우<br>
+> 피벗이 항상 가장 작거나, 가장 큰 값일 경우<br>
 • 정렬이 한쪽으로만 이루어짐<br>
 • 왼쪽 서브배열(0개), 오른쪽 서브배열(n-1개)
 
-• $W(n) = T(0) + T(n-1) + (n-1)$<br>
+👉 $W(n) = T(0) + T(n-1) + (n-1)$<br>
 $W(n)$: 원소 n개를 정렬하는 데 걸리는 최악의 경우 시간<br>
 $T(0)$: 왼쪽 부분 배열 정렬 시간 (비어있음 → 0)<br>
 $T(n-1)$: 오른쪽 배열 정렬 시간 (피벗 제외 나머지 모두)<br>
 $n-1$: 파티션 비용
 
-• 재귀적 방정식<br>
+👉 재귀적 방정식<br>
 $T(n) = T(n - 1) + n - 1, (for n > 0)$<br>
 $T(0) = 0$<br>
 solution: $T(n) = n(n-1)/2$ > $O(n^2)$ 시간복잡도
@@ -321,7 +322,8 @@ $A(n) = \sum_{p=1}^{n} \frac{1}{n} \left[ A(p-1) + A(n-p) \right] + (n - 1)$<br>
 • 앞부분: 피벗 위치 p에 따라 양쪽 서브배열을 정렬하는 평균 시간<br>
 • 뒤의 (n - 1)은 파티션하는 데 걸리는 시간
 
-• 근사화하면 $A(n) \approx (n + 1) \cdot 2 \ln n \approx 1.38(n + 1)\log n \in \Theta(n \log n)$<br>
+• 근사화하면<br> 
+$A(n) \approx (n + 1) \cdot 2 \ln n \approx 1.38(n + 1)\log n \in \Theta(n \log n)$<br>
 • 평균적으로 매우 효율적인 정렬 알고리즘
 
 <br>
@@ -362,6 +364,8 @@ void partition(index low, index high, index& pivotpoint) {
 <br>
 
 ## Factorial
+
+**[ 의사코드 ]**
 
 ```c
 /*
@@ -422,6 +426,51 @@ t₃ = t₂ + 1 = 2 + 1 = 3
 
 # 재귀식
 ## 재귀식이란
+**[ 재귀식의 정의 ]**<br>
+> 어떤 수열의 다음 항이 이전 항들에 의해 정의되는 식
+
+`용어정리`
+
+|용어|설명|
+|:---:|---|
+|선형|항들이 곱해지거나 제곱되지 않고, 계수 x항 형태인 것|
+|동차||
+|상수계수||
+|영 함수 (Zero function)|
+|후보해 (Candidate Solution)|문제를 풀기 위해 가설로 세운 해 (검증 필요)|
+|일반해 (General Solution)|재귀식 전체를 만족하는 해, 상수 포함해서 모든 해를 나타내는 형태|$f(n) = 0$|
+
+
+
+**[ 재귀식의 종류 ]**<br>
+> 동차(동질) 재귀식 (Homogeneous Recurrence)
+재귀식의 오른쪽이 항들의 조합으로만 이루어져 있고, 독립된 상수항이 없는 경우
+
+|구분|내용|
+|:---:|---|
+|선형 동차 재귀식|Linear Homogeneous Recurrence Relation)<br>각 항이 선형으로 나타나고, 상수항이 없고, 이전 항들의 조합으로 구성된 식|
+|동차 선형 상수 계수 재귀식|Homogeneous Linear Recurrence Equations with Constant Coefficients<br>$7t_n - 3t_{n-1} = 0$<br>$6t_n - 5t_{n-1} + 8t_{n-2} = 0$<br>$8t_n - 4t_{n-3} = 0$|
+
+
+> 비동차(비동질) 재귀식 (Nonhomogeneous Recurrence)
+
+|구분|내용|
+|:---:|---|
+|비동차 선형 재귀식|Nonhomogeneous Linear Recurrences|
+|수 계수를 갖는 비동차 선형 점화식|nonhomogeneous linear recurrence equation with constant coefficients<br>
+다음 형태의 점화식 $a_0 t_n + a_1 t_{n-1} + \cdots + a_k t_{n-k} = f(n)$에서 $k$와 $a_i$들은 상수이고 $f(n)$은 0이 아닌 어떤 함수|
+
+
+• 비동차 점화식을 푸는 일반적인 방법은 **알려져 있지 않음**
+• 그러나 **자주 나오는 특수한 경우**에 대해 방법이 존재함: $a_0 t_n + a_1 t_{n-1} + \cdots + a_k t_{n-k} = b^n p(n)$
+•  $b4$: 상수, $p(n)$: $n$에 대한 다항식
+
+
+
+
+
+
+
 
 
 **[ 재귀식 해 구하기 예시 ]**<br>
@@ -443,7 +492,7 @@ t₃ = t₂ + 1 = 2 + 1 = 3
 
 |구분|내용|
 |:---:|---|
-|**주어진 재귀식**|$t_n = 7t_{n/2}$ (단, $n > 1,n$은 $2$의 거듭제곱)<br>$t_1 = 1$|
+|**주어진 재귀식**|$t_n = 7t_{n/2}$ (단, $n > 1$ ,$n$은 $2$의 거듭제곱)<br>$t_1 = 1$|
 |**점검 (Inspection)**|$t_2 = 7t_{2/2} = 7t_1 = 7$<br>$t_4 = 7t_{4/2} = 7t_2 = 7^2$<br>$t_8 = 7t_{8/2} = 7t_4 = 7^3$<br>$t_{16} = 7t_{16/2} = 7t_8 = 7^4$|
 |**추정 (Estimation)**|$t_n = 7^{\log n}$|
 |**정당성 증명 (Proof of the correctness)**|$n = 1$ 일 때: $t_1 = 1 = 7^0 = 7^{\log 1}$|
@@ -463,35 +512,6 @@ $t_1 = 0$|
 |**추정 (Estimation)**|???|
 
 <br>
-
-**[ 재귀식의 종류 ]**<br>
-> 선형 동차(동질) 재귀식 (Homogeneous Linear Recurrence)
-
-`예시`<br>
-동차 선형 상수 계수 재귀식<br>
-(Homogeneous Linear Recurrence Equations with Constant Coefficients)<br>
-$7t_n - 3t_{n-1} = 0$<br>
-$6t_n - 5t_{n-1} + 8t_{n-2} = 0$<br>
-$8t_n - 4t_{n-3} = 0$
-
-
-> 비동차(비동질) 재귀식 (Nonhomogeneous Recurrence)
-
-비동차 선형 점화식(Nonhomogeneous Linear Recurrences)
-
-
-다음 형태의 점화식: $a_0 t_n + a_1 t_{n-1} + \cdots + a_k t_{n-k} = f(n)$
-• 여기서 $k$와 $a_i$들은 상수이고 $f(n)$은 0이 아닌 어떤 함수일 때, 이러한 식은 **상수 계수를 갖는 비동차 선형 점화식(nonhomogeneous linear recurrence equation with constant coefficients)** 이라고 부른다.
-• **영 함수 (Zero function)**: $f(n) = 0$
-• 비동차 점화식을 푸는 일반적인 방법은 **알려져 있지 않음**
-• 그러나 **자주 나오는 특수한 경우**에 대해 방법이 존재함: $a_0 t_n + a_1 t_{n-1} + \cdots + a_k t_{n-k} = b^n p(n)$
-•  $b4: 상수, $p(n)$: $n $에 대한 다항식
-
-
-
-**[ 용어 정리 ]**<br>
-후보해 (Candidate Solution): 문제를 풀기 위해 가설로 세운 해 (검증 필요)
-일반해 (General Solution): 재귀식 전체를 만족하는 해, 상수 포함해서 모든 해를 나타내는 형태
 
 
 **[ 정리 ]**
