--- a/_posts/develop/ds_ai/2025-03-23-al5.md
+++ b/_posts/develop/ds_ai/2025-03-23-al5.md
@@ -425,53 +425,10 @@ t₃ = t₂ + 1 = 2 + 1 = 3
 <br>
 
 # 재귀식
+
 ## 재귀식이란
 **[ 재귀식의 정의 ]**<br>
 > 어떤 수열의 다음 항이 이전 항들에 의해 정의되는 식
-
-`용어정리`
-
-|용어|설명|
-|:---:|---|
-|선형|항들이 곱해지거나 제곱되지 않고, 계수 x항 형태인 것|
-|동차||
-|상수계수||
-|영 함수 (Zero function)|
-|후보해 (Candidate Solution)|문제를 풀기 위해 가설로 세운 해 (검증 필요)|
-|일반해 (General Solution)|재귀식 전체를 만족하는 해, 상수 포함해서 모든 해를 나타내는 형태|$f(n) = 0$|
-
-
-
-**[ 재귀식의 종류 ]**<br>
-> 동차(동질) 재귀식 (Homogeneous Recurrence)
-재귀식의 오른쪽이 항들의 조합으로만 이루어져 있고, 독립된 상수항이 없는 경우
-
-|구분|내용|
-|:---:|---|
-|선형 동차 재귀식|Linear Homogeneous Recurrence Relation)<br>각 항이 선형으로 나타나고, 상수항이 없고, 이전 항들의 조합으로 구성된 식|
-|동차 선형 상수 계수 재귀식|Homogeneous Linear Recurrence Equations with Constant Coefficients<br>$7t_n - 3t_{n-1} = 0$<br>$6t_n - 5t_{n-1} + 8t_{n-2} = 0$<br>$8t_n - 4t_{n-3} = 0$|
-
-
-> 비동차(비동질) 재귀식 (Nonhomogeneous Recurrence)
-
-|구분|내용|
-|:---:|---|
-|비동차 선형 재귀식|Nonhomogeneous Linear Recurrences|
-|수 계수를 갖는 비동차 선형 점화식|nonhomogeneous linear recurrence equation with constant coefficients<br>
-다음 형태의 점화식 $a_0 t_n + a_1 t_{n-1} + \cdots + a_k t_{n-k} = f(n)$에서 $k$와 $a_i$들은 상수이고 $f(n)$은 0이 아닌 어떤 함수|
-
-
-• 비동차 점화식을 푸는 일반적인 방법은 **알려져 있지 않음**
-• 그러나 **자주 나오는 특수한 경우**에 대해 방법이 존재함: $a_0 t_n + a_1 t_{n-1} + \cdots + a_k t_{n-k} = b^n p(n)$
-•  $b4$: 상수, $p(n)$: $n$에 대한 다항식
-
-
-
-
-
-
-
-
 
 **[ 재귀식 해 구하기 예시 ]**<br>
 **1) 예제 1**<br>
@@ -512,6 +469,44 @@ $t_1 = 0$|
 |**추정 (Estimation)**|???|
 
 <br>
+<br>
+
+## 재귀식의 종류와 해 구하기
+**[ 용어정리 ]**<br>
+
+|용어|설명|
+|:---:|---|
+|재귀식|어떤 수열의 다음 항이 이전 항들에 의해 정의되는 식|
+|선형|항들이 곱해지거나 제곱되지 않고, 계수 x항 형태인 것|
+|동차||
+|상수계수||
+|영 함수 (Zero function)|$f(n) = 0$|
+|후보해 (Candidate Solution)|문제를 풀기 위해 가설로 세운 해 (검증 필요)|
+|일반해 (General Solution)|재귀식 전체를 만족하는 해, 상수 포함해서 모든 해를 나타내는 형태|
+
+<br>
+
+**[ 재귀식의 종류 ]**<br>
+> **동차(동질) 재귀식 (Homogeneous Recurrence)**<br>
+재귀식의 오른쪽이 항들의 조합으로만 이루어져 있고, 독립된 상수항이 없는 경우
+
+|구분|내용|
+|:---:|---|
+|선형 동차 재귀식|Linear Homogeneous Recurrence Relation)<br>각 항이 선형으로 나타나고, 상수항이 없고, 이전 항들의 조합으로 구성된 식|
+|동차 선형 상수 계수 재귀식|Homogeneous Linear Recurrence Equations with Constant Coefficients<br>$7t_n - 3t_{n-1} = 0$<br>$6t_n - 5t_{n-1} + 8t_{n-2} = 0$<br>$8t_n - 4t_{n-3} = 0$|
+
+
+> **비동차(비동질) 재귀식 (Nonhomogeneous Recurrence)**
+
+|구분|내용|
+|:---:|---|
+|비동차 선형 재귀식|Nonhomogeneous Linear Recurrences|
+|수 계수를 갖는 비동차 선형 점화식|nonhomogeneous linear recurrence equation with constant coefficients<br>다음 형태의 점화식 $a_0 t_n + a_1 t_{n-1} + \cdots + a_k t_{n-k} = f(n)$에서 $k$와 $a_i$들은 상수이고 $f(n)$은 0이 아닌 어떤 함수|
+
+
+• 비동차 점화식을 푸는 일반적인 방법은 **알려져 있지 않음**<br>
+• 그러나 **자주 나오는 특수한 경우**에 대해 방법이 존재함: $a_0 t_n + a_1 t_{n-1} + \cdots + a_k t_{n-k} = b^n p(n)$<br>
+•  $b4$: 상수, $p(n)$: $n$에 대한 다항식
 
 
 **[ 정리 ]**
@@ -522,12 +517,13 @@ $t_1 = 0$|
 
 |정리 B.2 (Theorem B.2)|
 |---|
-|• $r$이 상수 계수를 가진 동차 선형 점화식의 특성 방정식의 중복도 $m$을 가진 근이라면,<br>• $t_n = r^n, \quad t_n = n r^n, \quad t_n = n^2 r^n, \quad t_n = n^3 r^n, \quad \dots, \quad t_n = n^{m-1} r^n$ 는 모두 점화식의 해가 됨<br>• 그러므로 이러한 해 각각은 점화식의 일반해(정리 B.1에서 제시됨)에 포함|
+|• $r$이 상수 계수를 가진 동차 선형 점화식의 특성 방정식의 중복도 $m$을 가진 근이라면,<br>• $t_n = r^n, t_n = n r^n, t_n = n^2 r^n, t_n = n^3 r^n, \dots, t_n = n^{m-1} r^n$ 는 모두 점화식의 해가 됨<br>• 그러므로 이러한 해 각각은 점화식의 일반해(정리 B.1에서 제시됨)에 포함|
 
 
 |정리 B.3 (Theorem B.3)|
 |---|
-|다음 형태의 비동차 선형 점화식: $a_0 t_n + a_1 t_{n-1} + \cdots + a_k t_{n-k} = b^n p(n)$은 다음과 같은 특성 방정식을 갖는 동차 선형 점화식으로 변환할 수 있다: $(a_0 r^k + a_1 r^{k-1} + \cdots + a_k)(r - b)^{d+1} = 0$<br>여기서 \( d \)는 \( p(n) \)의 차수(Degree)<br>이 특성 방정식은 두 부분으로 이루어진다(해당 동차 점화식의 특성 방정식, 비동차 항으로부터 유도된 항)<br>만약 오른쪽 항에 \( b^n p(n) \) 같은 항이 둘 이상 있다면, 각각의 항이 특성 방정식에 하나의 항을 더하게 된다|
+|• 다음 형태의 비동차 선형 점화식은 다음과 같은 특성 방정식을 갖는 동차 선형 점화식으로 변환할 수 있다<br>
+$a_0 t_n + a_1 t_{n-1} + \cdots + a_k t_{n-k} = b^n p(n)$ => $(a_0 r^k + a_1 r^{k-1} + \cdots + a_k)(r - b)^{d+1} = 0$<br>• 여기서 $d$는 $p(n)$의 차수(Degree)<br>이 특성 방정식은 두 부분으로 이루어진다<br>(해당 동차 점화식의 특성 방정식, 비동차 항으로부터 유도된 항) <br>• 만약 오른쪽 항에 $b^n p(n)$ 같은 항이 둘 이상 있다면:<br> 각각의 항이 특성 방정식에 하나의 항을 더하게 된다|
 
 
 
