--- a/_posts/develop/ds_ai/2025-03-23-al5.md
+++ b/_posts/develop/ds_ai/2025-03-23-al5.md
@@ -290,7 +290,7 @@ void merge2(index low, index mid, index high) {
 |---|---|
 |`15 22 13 27 12 10 20 25`|처음|
 |`10 13 12 [15] 22 27 20 25`|피벗(15)을 기준으로 배열 나누기<br>• 피벗보다 작은 값은 왼쪽, 큰 값은 오른쪽|
-|`10 13 12 → 10 12 13`, `22 27 20 25 → 20 22 25 27`|두 부분 배열 각각 정렬|
+|`10 13 12 → 10 12 13`, <br>`22 27 20 25 → 20 22 25 27`|두 부분 배열 각각 정렬|
 |`15 22 13 27 12 10 20 25`|정렬|
 
 <br>
@@ -430,18 +430,97 @@ t₃ = t₂ + 1 = 2 + 1 = 3
 **[ 재귀식의 정의 ]**<br>
 > 어떤 수열의 다음 항이 이전 항들에 의해 정의되는 식
 
+<br>
+
+
+## 재귀식(Recurrence)의 종류와 해 구하기
+**[ 용어정리 ]**<br>
+
+|용어|설명|
+|:---:|---|
+|재귀식|어떤 수열의 다음 항이 이전 항들에 의해 정의되는 식|
+|선형(Linear)|미지수가 곱해지지 않고, 제곱(제곱근) 같은 비선형 연산이 없고, 각 항이 1차식으로 되어있는 경우|
+|동차(Homogeneous)|등식의 오른쪽에 독립된 항(=외부에서 들어온 값, 상수나 함수)이 없다<br> • 동차: $a_n = 2a_{n-1} +  3a_{n-2}$<br> • 비동차: $a_n = 2a_{n-1} + 5$|
+|상수계수(Equations with Constant Coefficient)|항 앞의 계수가 변하지 않는 상수|
+|영 함수 (Zero function)|$f(n) = 0$|
+|후보해 (Candidate Solution)|문제를 풀기 위해 가설로 세운 해 (검증 필요)|
+|일반해 (General Solution)|재귀식 전체를 만족하는 해, 상수 포함해서 모든 해를 나타내는 형태|
+
+<br>
+
+**[ 재귀식의 종류 ]**<br>
+
+
+
+|종류|설명|
+|:---:|---|
+|**동차(동질) 재귀식 (Homogeneous Recurrence)**|재귀식의 오른쪽이 항들의 조합으로만 이루어져 있고, 독립된 상수항이 없는 경우|
+|**비동차(비동질) 재귀식 (Nonhomogeneous Recurrence)**|오른쪽에 독립된 항 존재|
+|선형 동차 상수 계수 재귀식|이전 항들의 선형 결합 + 계수가 상수 + 동차|
+
+|선형 동차 재귀식|Linear Homogeneous Recurrence Relation)<br>각 항이 선형으로 나타나고, 상수항이 없고, 이전 항들의 조합으로 구성된 식|
+|동차 선형 상수 계수 재귀식|Homogeneous Linear Recurrence Equations with Constant Coefficients<br>$7t_n - 3t_{n-1} = 0$<br>$6t_n - 5t_{n-1} + 8t_{n-2} = 0$<br>$8t_n - 4t_{n-3} = 0$|
+
+
+> 
+
+|구분|내용|
+|:---:|---|
+|비동차 선형 재귀식|Nonhomogeneous Linear Recurrences|
+|수 계수를 갖는 비동차 선형 점화식|nonhomogeneous linear recurrence equation with constant coefficients<br>다음 형태의 점화식 $a_0 t_n + a_1 t_{n-1} + \cdots + a_k t_{n-k} = f(n)$에서 $k$와 $a_i$들은 상수이고 $f(n)$은 0이 아닌 어떤 함수|
+
+
+• 비동차 점화식을 푸는 일반적인 방법은 **알려져 있지 않음**<br>
+• 그러나 **자주 나오는 특수한 경우**에 대해 방법이 존재함: $a_0 t_n + a_1 t_{n-1} + \cdots + a_k t_{n-k} = b^n p(n)$<br>
+•  $b4$: 상수, $p(n)$: $n$에 대한 다항식
+
+
+**[ 재귀식을 푸는 법]**<br>
+
+• 수학적 귀납법 (Induction): 귀납적 방식으로 일반해가 맞는지 증명<br>
+• 특성방정식 (Characteristic Equation): 선형 동차 상수 계수 재귀식에서 일반해를 구함<br>
+• 곱셈을 이용한 대입 (Substitution): 식을 반복 대입해 일반항 추정<br>
+• 변수 치환 (Change of Variables): 복잡한 식을 단순화하기 위해 변수 변환<br>
+• 생성 함수 (Generating Functions): 함수 형태로 수열 표현 후 해석<br>
+• 마스터 정리 (Master Theorem): 분할정복 알고리즘의 시간 복잡도 분석용<br>
+• 비동차 재귀식 해법: 비동차 항이 있는 경우, 일반항에 비슷한 꼴의 특수해를 추가
+
+
+**[ 정리 ]**
+
+|정리 B.1 (Theorem B.1)|
+|---|
+|$a_0t_n + a_1t_{n-1} + ... + a_kt_{n-k} = 0$<br>👉 여기서 $k$와 각 $a_i$들은 상수일 때, 이를 상수 계수로 갖는 동차 선형 재귀식<br>• 선형(linear)인 이유: 모든 항 $t_1$가 1차로만 등장하기 때문<br>• 다음 항은 포함하지 않음: $t_{2n-i}, t_{n-1}t{n-j}$<br>• $c$가 1이 아닌 양의 상수일 경우, 다음 항도 포함하지 않음: $t_{c(n-i)}$|
+
+|정리 B.2 (Theorem B.2)|
+|---|
+|• $r$이 상수 계수를 가진 동차 선형 점화식의 특성 방정식의 중복도 $m$을 가진 근이라면,<br>• $t_n = r^n, t_n = n r^n, t_n = n^2 r^n, t_n = n^3 r^n, \dots, t_n = n^{m-1} r^n$ 는 모두 점화식의 해가 됨<br>• 그러므로 이러한 해 각각은 점화식의 일반해(정리 B.1에서 제시됨)에 포함|
+
+
+|정리 B.3 (Theorem B.3)|
+|---|
+|• 다음 형태의 비동차 선형 점화식은 다음과 같은 특성 방정식을 갖는 동차 선형 점화식으로 변환할 수 있다<br>
+$a_0 t_n + a_1 t_{n-1} + \cdots + a_k t_{n-k} = b^n p(n)$ => $(a_0 r^k + a_1 r^{k-1} + \cdots + a_k)(r - b)^{d+1} = 0$<br>• 여기서 $d$는 $p(n)$의 차수(Degree)<br>이 특성 방정식은 두 부분으로 이루어진다<br>(해당 동차 점화식의 특성 방정식, 비동차 항으로부터 유도된 항) <br>• 만약 오른쪽 항에 $b^n p(n)$ 같은 항이 둘 이상 있다면:<br> 각각의 항이 특성 방정식에 하나의 항을 더하게 된다|
+
+
+<br>
+<br>
+
+## 재귀식의 해 구하기 - 귀납법
+
+
 **[ 재귀식 해 구하기 예시 ]**<br>
 **1) 예제 1**<br>
 
 |구분|내용|
 |:---:|---|
-|**`주어진 재귀식`**|$t_n = t_{n/2} + 1$(단, \(n > 1\), \(n\)은 2의 거듭제곱)<br>$t_1 = 1$|
-|**`점검 (Inspection)`**|$t_2 = t_{2/2} + 1 = t_1 + 1 = 1 + 1 = 2$  <br>$t_4 = t_{4/2} + 1 = t_2 + 1 = 2 + 1 = 3$<br>$t_8 = t_{8/2} + 1 = t_4 + 1 = 3 + 1 = 4$ <br>$t_{16} = t_{16/2} + 1 = t_8 + 1 = 4 + 1 = 5$|
-|**`추정 (Estimation)`**|$t_n = \log n + 1$|
-|**`정당성 증명 (Proof of the correctness)`**|$n = 1$일 때: $t_1 = 1 = \log 1 + 1$|
-|**`귀납 가정 (Induction hypothesis)`**|$t_n = \log n + 1$|
-|**`귀납 단계 (Induction step)`**|$2n$을 대입하여 다음을 보여야 함:<br>$t_{2n} = \log (2n) + 1$|
-|**`결론`**|$t_{2n} = t_{(2n)/2} + 1 = t_n + 1 = \log n + 1 + 1$<br>$= \log n + \log 2 + 1$<br>$= \log (2n) + 1$|
+|**주어진 재귀식**|$t_n = t_{n/2} + 1$(단, \(n > 1\), \(n\)은 2의 거듭제곱)<br>$t_1 = 1$|
+|**점검 (Inspection)**|$t_2 = t_{2/2} + 1 = t_1 + 1 = 1 + 1 = 2$  <br>$t_4 = t_{4/2} + 1 = t_2 + 1 = 2 + 1 = 3$<br>$t_8 = t_{8/2} + 1 = t_4 + 1 = 3 + 1 = 4$ <br>$t_{16} = t_{16/2} + 1 = t_8 + 1 = 4 + 1 = 5$|
+|**추정 (Estimation)**|$t_n = \log n + 1$|
+|**정당성 증명 (Proof of the correctness)**|$n = 1$일 때: $t_1 = 1 = \log 1 + 1$|
+|**귀납 가정 (Induction hypothesis)**|$t_n = \log n + 1$|
+|**귀납 단계 (Induction step)**|$2n$을 대입하여 다음을 보여야 함:<br>$t_{2n} = \log (2n) + 1$|
+|**결론**|$t_{2n} = t_{(2n)/2} + 1 = t_n + 1 = \log n + 1 + 1$<br>$= \log n + \log 2 + 1$<br>$= \log (2n) + 1$|
 
 <br>
 
@@ -467,63 +546,4 @@ t₃ = t₂ + 1 = 2 + 1 = 3
 $t_1 = 0$|
 |**점검 (Inspection)**|$t_2 = 2t_{2/2} + 2 - 1 = 2t_1 + 1 = 1$<br>$t_4 = 2t_{4/2} + 4 - 1 = 2t_2 + 3 = 5$<br>$t_8 = 2t_{8/2} + 8 - 1 = 2t_4 + 7 = 17$<br>$t_{16} = 2t_{16/2} + 16 - 1 = 2t_8 + 15 = 49$|
 |**추정 (Estimation)**|???|
-
-<br>
-<br>
-
-## 재귀식의 종류와 해 구하기
-**[ 용어정리 ]**<br>
-
-|용어|설명|
-|:---:|---|
-|재귀식|어떤 수열의 다음 항이 이전 항들에 의해 정의되는 식|
-|선형|항들이 곱해지거나 제곱되지 않고, 계수 x항 형태인 것|
-|동차||
-|상수계수||
-|영 함수 (Zero function)|$f(n) = 0$|
-|후보해 (Candidate Solution)|문제를 풀기 위해 가설로 세운 해 (검증 필요)|
-|일반해 (General Solution)|재귀식 전체를 만족하는 해, 상수 포함해서 모든 해를 나타내는 형태|
-
-<br>
-
-**[ 재귀식의 종류 ]**<br>
-> **동차(동질) 재귀식 (Homogeneous Recurrence)**<br>
-재귀식의 오른쪽이 항들의 조합으로만 이루어져 있고, 독립된 상수항이 없는 경우
-
-|구분|내용|
-|:---:|---|
-|선형 동차 재귀식|Linear Homogeneous Recurrence Relation)<br>각 항이 선형으로 나타나고, 상수항이 없고, 이전 항들의 조합으로 구성된 식|
-|동차 선형 상수 계수 재귀식|Homogeneous Linear Recurrence Equations with Constant Coefficients<br>$7t_n - 3t_{n-1} = 0$<br>$6t_n - 5t_{n-1} + 8t_{n-2} = 0$<br>$8t_n - 4t_{n-3} = 0$|
-
-
-> **비동차(비동질) 재귀식 (Nonhomogeneous Recurrence)**
-
-|구분|내용|
-|:---:|---|
-|비동차 선형 재귀식|Nonhomogeneous Linear Recurrences|
-|수 계수를 갖는 비동차 선형 점화식|nonhomogeneous linear recurrence equation with constant coefficients<br>다음 형태의 점화식 $a_0 t_n + a_1 t_{n-1} + \cdots + a_k t_{n-k} = f(n)$에서 $k$와 $a_i$들은 상수이고 $f(n)$은 0이 아닌 어떤 함수|
-
-
-• 비동차 점화식을 푸는 일반적인 방법은 **알려져 있지 않음**<br>
-• 그러나 **자주 나오는 특수한 경우**에 대해 방법이 존재함: $a_0 t_n + a_1 t_{n-1} + \cdots + a_k t_{n-k} = b^n p(n)$<br>
-•  $b4$: 상수, $p(n)$: $n$에 대한 다항식
-
-
-**[ 정리 ]**
-
-|정리 B.1 (Theorem B.1)|
-|---|
-|$a_0t_n + a_1t_{n-1} + ... + a_kt_{n-k} = 0$<br>👉 여기서 $k$와 각 $a_i$들은 상수일 때, 이를 상수 계수로 갖는 동차 선형 재귀식<br>• 선형(linear)인 이유: 모든 항 $t_1$가 1차로만 등장하기 때문<br>• 다음 항은 포함하지 않음: $t_{2n-i}, t_{n-1}t{n-j}$<br>• $c$가 1이 아닌 양의 상수일 경우, 다음 항도 포함하지 않음: $t_{c(n-i)}$|
-
-|정리 B.2 (Theorem B.2)|
-|---|
-|• $r$이 상수 계수를 가진 동차 선형 점화식의 특성 방정식의 중복도 $m$을 가진 근이라면,<br>• $t_n = r^n, t_n = n r^n, t_n = n^2 r^n, t_n = n^3 r^n, \dots, t_n = n^{m-1} r^n$ 는 모두 점화식의 해가 됨<br>• 그러므로 이러한 해 각각은 점화식의 일반해(정리 B.1에서 제시됨)에 포함|
-
-
-|정리 B.3 (Theorem B.3)|
-|---|
-|• 다음 형태의 비동차 선형 점화식은 다음과 같은 특성 방정식을 갖는 동차 선형 점화식으로 변환할 수 있다<br>
-$a_0 t_n + a_1 t_{n-1} + \cdots + a_k t_{n-k} = b^n p(n)$ => $(a_0 r^k + a_1 r^{k-1} + \cdots + a_k)(r - b)^{d+1} = 0$<br>• 여기서 $d$는 $p(n)$의 차수(Degree)<br>이 특성 방정식은 두 부분으로 이루어진다<br>(해당 동차 점화식의 특성 방정식, 비동차 항으로부터 유도된 항) <br>• 만약 오른쪽 항에 $b^n p(n)$ 같은 항이 둘 이상 있다면:<br> 각각의 항이 특성 방정식에 하나의 항을 더하게 된다|
-
-
 
