--- a/_posts/develop/ds_ai/2025-03-23-al5.md
+++ b/_posts/develop/ds_ai/2025-03-23-al5.md
@@ -451,28 +451,17 @@ t₃ = t₂ + 1 = 2 + 1 = 3
 **[ 재귀식의 종류 ]**<br>
 
 
-
 |종류|설명|
 |:---:|---|
-|**동차(동질) 재귀식 (Homogeneous Recurrence)**|재귀식의 오른쪽이 항들의 조합으로만 이루어져 있고, 독립된 상수항이 없는 경우|
-|**비동차(비동질) 재귀식 (Nonhomogeneous Recurrence)**|오른쪽에 독립된 항 존재|
-|선형 동차 상수 계수 재귀식|이전 항들의 선형 결합 + 계수가 상수 + 동차|
+|**동차(동질) 재귀식**<br>**(Homogeneous Recurrence)**|재귀식의 오른쪽이 항들의 조합으로만 이루어져 있고, 독립된 상수항이 없는 경우|
+|**비동차(비동질) 재귀식**<br>**(Nonhomogeneous Recurrence)**|오른쪽에 독립된 항 존재|
+|**선형 동차 상수 계수 재귀식**|이전 항들의 선형 결합 + 계수가 상수 + 동차|
+|**선형 동차 재귀식**|각 항이 선형으로 나타나고, 상수항이 없고, 이전 항들의 조합으로 구성된 식|
+|동차 선형 상수 계수 재귀식|<br>$7t_n - 3t_{n-1} = 0$<br>$6t_n - 5t_{n-1} + 8t_{n-2} = 0$<br>$8t_n - 4t_{n-3} = 0$|
+|비동차 선형 재귀식||
+|상수 계수를 갖는 비동차 선형 재귀식|nonhomogeneous linear recurrence equation with constant coefficients<br>다음 형태의 점화식 $a_0 t_n + a_1 t_{n-1} + \cdots + a_k t_{n-k} = f(n)$에서 $k$와 $a_i$들은 상수이고 $f(n)$은 0이 아닌 어떤 함수|
 
-|선형 동차 재귀식|Linear Homogeneous Recurrence Relation)<br>각 항이 선형으로 나타나고, 상수항이 없고, 이전 항들의 조합으로 구성된 식|
-|동차 선형 상수 계수 재귀식|Homogeneous Linear Recurrence Equations with Constant Coefficients<br>$7t_n - 3t_{n-1} = 0$<br>$6t_n - 5t_{n-1} + 8t_{n-2} = 0$<br>$8t_n - 4t_{n-3} = 0$|
-
-
-> 
-
-|구분|내용|
-|:---:|---|
-|비동차 선형 재귀식|Nonhomogeneous Linear Recurrences|
-|수 계수를 갖는 비동차 선형 점화식|nonhomogeneous linear recurrence equation with constant coefficients<br>다음 형태의 점화식 $a_0 t_n + a_1 t_{n-1} + \cdots + a_k t_{n-k} = f(n)$에서 $k$와 $a_i$들은 상수이고 $f(n)$은 0이 아닌 어떤 함수|
-
-
-• 비동차 점화식을 푸는 일반적인 방법은 **알려져 있지 않음**<br>
-• 그러나 **자주 나오는 특수한 경우**에 대해 방법이 존재함: $a_0 t_n + a_1 t_{n-1} + \cdots + a_k t_{n-k} = b^n p(n)$<br>
-•  $b4$: 상수, $p(n)$: $n$에 대한 다항식
+<br>
 
 
 **[ 재귀식을 푸는 법]**<br>
@@ -485,6 +474,12 @@ t₃ = t₂ + 1 = 2 + 1 = 3
 • 마스터 정리 (Master Theorem): 분할정복 알고리즘의 시간 복잡도 분석용<br>
 • 비동차 재귀식 해법: 비동차 항이 있는 경우, 일반항에 비슷한 꼴의 특수해를 추가
 
+
+• 비동차 점화식을 푸는 일반적인 방법은 **알려져 있지 않음**<br>
+• 그러나 **자주 나오는 특수한 경우**에 대해 방법이 존재함: $a_0 t_n + a_1 t_{n-1} + \cdots + a_k t_{n-k} = b^n p(n)$<br>
+• $b4$: 상수, $p(n)$: $n$에 대한 다항식
+
+<br>
 
 **[ 정리 ]**
 
