--- a/_posts/develop/ds_ai/2025-03-24-al5-2.md
+++ b/_posts/develop/ds_ai/2025-03-24-al5-2.md
@@ -12,16 +12,18 @@ sidebar:
 <br>
 
 
+• 수학적 귀납법 (Induction): 귀납적 방식으로 일반해가 맞는지 증명<br>
+• 특성방정식 (Characteristic Equation): 선형 동차 상수 계수 재귀식에서 일반해를 구함<br>
+• 곱셈을 이용한 대입 (Substitution): 식을 반복 대입해 일반항 추정<br>
+• 변수 치환 (Change of Variables): 복잡한 식을 단순화하기 위해 변수 변환<br>
+• 생성 함수 (Generating Functions): 함수 형태로 수열 표현 후 해석<br>
+• 마스터 정리 (Master Theorem): 분할정복 알고리즘의 시간 복잡도 분석용<br>
+• 비동차 재귀식 해법: 비동차 항이 있는 경우, 일반항에 비슷한 꼴의 특수해를 추가
 
 
 
-
-
-
-
-
-## 특성 방정식을 이용한 재귀식 풀이 
-(Solving Recurrences Using the Characteristic Equation)
+# 특성 방정식을 이용한 재귀식 풀이 
+> Solving Recurrences Using the Characteristic Equation
 
 
 **[ 예시 ]**<br>
@@ -34,12 +36,7 @@ $t_0 = 0$, $t_1 = 1$
 
 
 
-
-### **특성 방정식을 이용한 재귀식 풀이**  
-**Solving Recurrences Using the Characteristic Equation**
-
-
-**[ 동차 선형 재귀식 예제로부터 재귀식 풀기 ]**
+**[ 동차 선형 재귀식 예제로부터 재귀식 풀이 ]**
 
 |단계|내용|
 |:---:|---|
@@ -148,74 +145,32 @@ $(r - 1)(r - 2)^3 = 0$: $r = 2$가 세 번 중복되므로 중복도는 3
 ## 비동차 선형 점화식 예제
 
 
-\[
-t_n - 3t_{n-1} = 4^n (8n + 7) \quad \Rightarrow \quad k = 1, \, b = 4, \, p(n) = 8n + 7
-\]
+$t_n - 3t_{n-1} = 4^n (8n + 7) \quad \Rightarrow \quad k = 1, \, b = 4, \, p(n) = 8n + 7$
 
----
 
 **[ 예제 1 ]**
 
-$t_n - 3t_{n-1} = 4^n \quad \Rightarrow \quad k = 1, \, b = 4, \, p(n) = 1$
+$t_n - 3t_{n-1} = 4^n \Rightarrow  k = 1, \, b = 4, \, p(n) = 1$<br>
+$t_n - 3t_{n-1} = 4^n(n > 1), t_0 = 0, t_1 = 4$
 
-$t_n - 3t_{n-1} = 4^n \quad (n > 1), \quad t_0 = 0, \quad t_1 = 4$
-
-- 점화식에서 $n$을 $n - 1$로 치환: $t_{n-1} - 3t_{n-2} = 4^{n-1}$
-
-- 식을 4로 나눔: $\frac{t_n}{4} - \frac{3t_{n-1}}{4} = 4^{n-1}$
-
----
-
-### ● 비동차 점화식 예제 1 풀이 (계속)
-
-- 다음 두 식을 빼서 \( 4^{n-1} \) 항 제거:
-
-\[
-\frac{t_n}{4} - \frac{7t_{n-1}}{4} + 3t_{n-2} = 0
-\]
-
-- 동차 점화식으로 만들기 위해 4를 곱함:
-
-\[
-t_n - 7t_{n-1} + 12t_{n-2} = 0
-\]
-
-- 특성 방정식:
-
-\[
-t_n = r^n \Rightarrow r^2 - 7r + 12 = (r - 3)(r - 4) = 0
-\]
-
-- 일반해:
-
-\[
-t_n = c_1 \cdot 3^n + c_2 \cdot 4^n
-\]
-
----
-
-### ● 예제 1 해의 초기 조건 적용 (\( t_0 = 0 \), \( t_1 = 4 \))
-
-\[
-t_n = 4^{n+1} - 4 \cdot 3^n
-\]
+|단계|설명|
+|:---:|---|
+|점화식에서 $n$을 $n - 1$로 치환|$t_{n-1} - 3t_{n-2} = 4^{n-1}$|
+|식을 4로 나눔|$\frac{t_n}{4} - \frac{3t_{n-1}}{4} = 4^{n-1}$|
+|다음 두 식을 빼서 $4^{n-1}$ 항 제거|$\frac{t_n}{4} - \frac{7t_{n-1}}{4} + 3t_{n-2} = 0$|
+|동차 점화식으로 만들기 위해 4를 곱함|t_n - 7t_{n-1} + 12t_{n-2} = 0|
+|특성 방정식|$t_n = r^n \Rightarrow r^2 - 7r + 12 = (r - 3)(r - 4) = 0$|
+|일반해|$t_n = c_1 \cdot 3^n + c_2 \cdot 4^n$|
+|해의 초기 조건 적용 $t_0 = 0$, $t_1 = 4$|$t_n = 4^{n+1} - 4 \cdot 3^n$|
 
 ---
 
 ### ● 주의 사항 (Notice)
 
-\[
-t_n = c_1 \cdot 3^n + c_2 \cdot 4^n
-\]
+$t_n = c_1 \cdot 3^n + c_2 \cdot 4^n$
 
-- 파란 상자 부분 (\( c_1 \cdot 3^n \)): 동차 점화식의 특성 방정식에서 유도된 항
-- 빨간 상자 부분 (\( c_2 \cdot 4^n \)): 비동차 항 \( 4^n \)에서 유도된 항
-=
-
-
-아래는 주어진 이미지들에 대한 원문 그대로의 한국어 번역입니다:
-
----
+- 파란 상자 부분 $c_1 \cdot 3^n$: 동차 점화식의 특성 방정식에서 유도된 항
+- 빨간 상자 부분 $c_2 \cdot 4^n$: 비동차 항 $4^n$에서 유도된 항
 
 
 
@@ -229,76 +184,28 @@ t_n = c_1 \cdot 3^n + c_2 \cdot 4^n
 | \( 5n + 7 \)                   | 1      |
 | \( 8 \)                        | 0      |
 
----
+<br>
 
-### ● 비동차 점화식 예제 2 풀이
+**[ 비동차 점화식 예제 2 풀이 ]**
 
-\[
-t_n - 3t_{n-1} = 4^n (2n + 1) \quad \text{for } n > 1
-\]
-\[
-t_0 = 0, \quad t_1 = 12
-\]
+$t_n - 3t_{n-1} = 4^n (2n + 1) \quad \text{for } n > 1$
+$t_0 = 0, \quad t_1 = 12$
 
-- 동차식에서 유도한 특성 방정식:
-
-\[
-t_n - 3t_{n-1} = 0 \quad \Rightarrow \quad r^1 - 3 = 0
-\]
-
-- 비동차 항으로부터 얻은 항:
-
-\[
-(r - b)^{d+1} = (r - 4)^{1+1} = (r - 4)^2
-\]
-
----
-
-### ● 예제 2 계속
-
-- 위 항들로부터 특성 방정식을 구성:
-
-\[
-(r - 3)(r - 4)^2 = 0
-\]
-
-- 이 방정식을 풀면 \( r = 3 \), \( r = 4 \) (중복도 2)
-
-- 일반해:
-
-\[
-t_n = c_1 3^n + c_2 4^n + c_3 n 4^n
-\]
-
-- 그러나 주어진 초기 조건은 2개뿐:
-
-\[
-t_0 = 0, \quad t_1 = 12
-\]
-
-- \( t_2 \)는 점화식을 사용하여 계산:
-
-\[
-t_2 - 3t_1 = 4^2(2 \cdot 2 + 1) \quad \Rightarrow \quad t_2 = 116
-\]
-
----
-
-### ● 예제 2 계속: 일반해 구하기
-
-초기 조건 \( t_0 = 0 \), \( t_1 = 12 \), \( t_2 = 116 \) 를 사용하여 일반해를 구하면:
-
-\[
-t_n = 20 \cdot 3^n - 20 \cdot 4^n + 8n \cdot 4^n
-\]
+|단계|설명|
+|:---:|---|
+|동차식에서 유도한 특성 방정식|$t_n - 3t_{n-1} = 0 \Rightarrow r^1 - 3 = 0$|
+|비동차 항으로부터 얻은 항|$(r - b)^{d+1} = (r - 4)^{1+1} = (r - 4)^2$|
+|위 항들로부터 특성 방정식을 구성|$(r - 3)(r - 4)^2 = 0$|
+|이 방정식을 풀면|$r = 3$, $r = 4$ (중복도 2)|
+|일반해|$t_n = c_1 3^n + c_2 4^n + c_3 n 4^n$|
+|그러나 주어진 초기 조건은 2개뿐: $t_0 = 0, t_1 = 12$|
+|$t_2$는 점화식을 사용하여 계산|$t_2 - 3t_1 = 4^2(2 \cdot 2 + 1) \Rightarrow t_2 = 116$|
+|일반해 구하기|초기 조건 $t_0 = 0$, $t_1 = 12$, $t_2 = 116$를 사용하여 일반해를 구하면<br>$t_n = 20 \cdot 3^n - 20 \cdot 4^n + 8n \cdot 4^n$|
 
 
+<br>
 
-다음은 이미지에 포함된 **비동차 선형 점화식 예제 3번, 4번**에 대한 한국어 번역입니다:
-
----
-
-## ● 비동차 선형 점화식 예제 3 풀이
+**[ 비동차 선형 점화식 예제 3 풀이 ]**
 
 \[
 t_n - t_{n-1} = n - 1 \quad (n > 0), \quad t_0 = 0
@@ -399,51 +306,37 @@ t_n - 2t_{n-1} = 0 \quad \Rightarrow \quad r^1 - 2 = 0
 
 **[ 예제 1 ]**
 
-\[
-T(n) = T\left(\frac{n}{2}\right) + 1 \quad \text{(단, } n > 1, \text{ n은 2의 거듭제곱)}, \quad T(1) = 1
-\]
+$T(n) = T\left(\frac{n}{2}\right) + 1 \quad \text{(단, } n > 1, \text{ n은 2의 거듭제곱)}, \quad T(1) = 1$
 
 - 아래와 같이 점화식을 변형:
 
-\[
-n = 2^k \Rightarrow k = \log_2 n
-\]
+$n = 2^k \Rightarrow k = \log_2 n$
 
-- 점화식에 \( n = 2^k \)를 대입:
+- 점화식에 $n = 2^k$를 대입:
 
-\[
-T(2^k) = T\left(\frac{2^k}{2}\right) + 1 = T(2^{k-1}) + 1
-\]
+$T(2^k) = T\left(\frac{2^k}{2}\right) + 1 = T(2^{k-1}) + 1$
 
 
-- \( t_k = T(2^k) \)로 두면,
+- $t_k = T(2^k)$로 두면,
 
-\[
-t_k = t_{k-1} + 1
-\]
+$t_k = t_{k-1} + 1$
 
 - 정리 B.3에 따라 해는:
 
-\[
-t_k = c_1 + c_2 k
-\]
+$t_k = c_1 + c_2 k$
 
----
+
 
 - 원래 점화식의 일반해를 얻기 위해:
 
-① \( T(2^k) = t_k = c_1 + c_2 k \)  
-② \( k = \log_2 n \) 대입
+① $T(2^k) = t_k = c_1 + c_2 k$ 
+② $k = \log_2 n$ 대입
 
-\[
-T(n) = c_1 + c_2 \log_2 n
-\]
+$T(n) = c_1 + c_2 \log_2 n$
 
-- 초기 조건 \( T(1) = 1 \)을 이용하면:
+- 초기 조건 $T(1) = 1$을 이용하면:
 
-\[
-T(n) = 1 + \log_2 n
-\]
+$T(n) = 1 + \log_2 n$
 
 
 
