--- a/_posts/develop/ds_ai/2025-03-24-al5-2.md
+++ b/_posts/develop/ds_ai/2025-03-24-al5-2.md
@@ -91,8 +91,7 @@ $t_n = 0 \cdot (3^n) + 1 \cdot (2^n) = 2^n$
 |특성 방정식 도출|$r^2 - r - 1 = 0$|
 |특성 방정식 해 구하기|$r = \frac{1 + \sqrt{5}}{2}, \quad r = \frac{1 - \sqrt{5}}{2}$
 |일반해 구성 (Theorem B.1에 따라)|$t_n = c_1 \left( \frac{1 + \sqrt{5}}{2} \right)^n + c_2 \left( \frac{1 - \sqrt{5}}{2} \right)^n$|
-|상수 \(c_1, c_2\) 초기 조건으로 결정|초기 조건: $t_0 = 0$<br>
-$c_1 \cdot \left( \frac{1 + \sqrt{5}}{2} \right)^0 + c_2 \cdot \left( \frac{1 - \sqrt{5}}{2} \right)^0 = 1 \cdot c_1 + 1 \cdot c_2 = 0$ <br> $\Rightarrow c_1 + c_2 = 0$<br>$t_1 = 1$<br>$c_1 \cdot \left( \frac{1 + \sqrt{5}}{2} \right) + c_2 \cdot \left( \frac{1 - \sqrt{5}}{2} \right) = 1$|
+|상수 \(c_1, c_2\) 초기 조건으로 결정|초기 조건: $t_0 = 0$<br>$c_1 \cdot \left( \frac{1 + \sqrt{5}}{2} \right)^0 + c_2 \cdot \left( \frac{1 - \sqrt{5}}{2} \right)^0 = 1 \cdot c_1 + 1 \cdot c_2 = 0$ <br> $\Rightarrow c_1 + c_2 = 0$<br>$t_1 = 1$<br>$c_1 \cdot \left( \frac{1 + \sqrt{5}}{2} \right) + c_2 \cdot \left( \frac{1 - \sqrt{5}}{2} \right) = 1$|
 |식 정리 및 상수 결정|$\left( \frac{1 + \sqrt{5}}{2} \right) c_1 + \left( \frac{1 - \sqrt{5}}{2} \right) c_2 = 1$<br>$c_2 = -c_1$ 를 대입하면<br>$\left( \frac{1 + \sqrt{5}}{2} \right) c_1 - \left( \frac{1 - \sqrt{5}}{2} \right) c_1 = 1$<br> $\Rightarrow \left( \frac{\sqrt{5}}{1} \right) c_1 = 1$<br>$\Rightarrow c_1 = \frac{1}{\sqrt{5}},\quad c_2 = -\frac{1}{\sqrt{5}}$|
 |최종 일반해 (Final General Solution)|$t_n = \frac{1}{\sqrt{5}} \left( \left( \frac{1 + \sqrt{5}}{2} \right)^n - \left( \frac{1 - \sqrt{5}}{2} \right)^n \right)$<br>이 식은 피보나치 수열의 일반항과 동일|
 
@@ -161,7 +160,7 @@ $t_n - 3t_{n-1} = 4^n(n > 1), t_0 = 0, t_1 = 4$
 |동차 점화식으로 만들기 위해 4를 곱함|t_n - 7t_{n-1} + 12t_{n-2} = 0|
 |특성 방정식|$t_n = r^n \Rightarrow r^2 - 7r + 12 = (r - 3)(r - 4) = 0$|
 |일반해|$t_n = c_1 \cdot 3^n + c_2 \cdot 4^n$|
-|해의 초기 조건 적용 $t_0 = 0$, $t_1 = 4$|$t_n = 4^{n+1} - 4 \cdot 3^n$|
+|해의 초기 조건 적용|$t_0 = 0$, $t_1 = 4$<br>$t_n = 4^{n+1} - 4 \cdot 3^n$|
 
 ---
 
@@ -198,7 +197,7 @@ $t_0 = 0, \quad t_1 = 12$
 |위 항들로부터 특성 방정식을 구성|$(r - 3)(r - 4)^2 = 0$|
 |이 방정식을 풀면|$r = 3$, $r = 4$ (중복도 2)|
 |일반해|$t_n = c_1 3^n + c_2 4^n + c_3 n 4^n$|
-|그러나 주어진 초기 조건은 2개뿐: $t_0 = 0, t_1 = 12$|
+|그러나 주어진 초기 조건은 2개뿐|$t_0 = 0, t_1 = 12$|
 |$t_2$는 점화식을 사용하여 계산|$t_2 - 3t_1 = 4^2(2 \cdot 2 + 1) \Rightarrow t_2 = 116$|
 |일반해 구하기|초기 조건 $t_0 = 0$, $t_1 = 12$, $t_2 = 116$를 사용하여 일반해를 구하면<br>$t_n = 20 \cdot 3^n - 20 \cdot 4^n + 8n \cdot 4^n$|
 
@@ -207,100 +206,38 @@ $t_0 = 0, \quad t_1 = 12$
 
 **[ 비동차 선형 점화식 예제 3 풀이 ]**
 
-\[
-t_n - t_{n-1} = n - 1 \quad (n > 0), \quad t_0 = 0
-\]
+$t_n - t_{n-1} = n - 1 \quad (n > 0), \quad t_0 = 04
 
-- 동차식에서 유도한 특성 방정식:
+|단계|설명|
+|:---:|---|
+|동차식에서 유도한 특성 방정식|$t_n - t_{n-1} = 0 \Rightarrow r^1 - 1 = 0$|
+|비동차 항에서 유도된 항|$(r - 1)^{1+1}$|
+|오른쪽 항 $n - 1 = 1^n(n^1 - 1)$ 로부터|$b = 1, d = 1$|
+|두 항을 곱하여 얻는 특성 방정식|$(r - 1)(r - 1)^2 = (r - 1)^3$|
+|$r = 1$의 중복도 3 해를 갖는 방정식||
+|정리 B.2에 따라 일반해는|$t_n = c_1 \cdot 1^n + c_2 n \cdot 1^n + c_3 n^2 \cdot 1^n = c_1 + c_2 n + c_3 n^2$|
+|두 개의 추가 초기 조건 계산|$t_1 = t_0 + 1 - 1 = 0 + 0 = 0$<br>$t_2 = t_1 + 2 - 1 = 0 + 1 = 1$|
+|초기 조건을 사용하여 일반해 완성|$t_n = \frac{n(n-1)}{2}$|
 
-\[
-t_n - t_{n-1} = 0 \quad \Rightarrow \quad r^1 - 1 = 0
-\]
 
-- 비동차 항에서 유도된 항:
+<br>
 
-\[
-(r - 1)^{1+1}
-\]
+**[ 비동차 선형 점화식 예제 4 풀이 ]**
 
-> 오른쪽 항 \( n - 1 = 1^n(n^1 - 1) \) 로부터 \( b = 1, d = 1 \)
+$t_n - 2t_{n-1} = n + 2^n \quad (n > 1), \quad t_1 = 0$
 
----
-
-## ● 예제 3 계속
-
-- 두 항을 곱하여 얻는 특성 방정식:
-
-\[
-(r - 1)(r - 1)^2 = (r - 1)^3
-\]
-
-- \( r = 1 \)의 중복도 3 해를 갖는 방정식
-
-- 정리 B.2에 따라 일반해는:
-
-\[
-t_n = c_1 \cdot 1^n + c_2 n \cdot 1^n + c_3 n^2 \cdot 1^n = c_1 + c_2 n + c_3 n^2
-\]
-
-- 두 개의 추가 초기 조건 계산:
-
-\[
-t_1 = t_0 + 1 - 1 = 0 + 0 = 0
-\]
-\[
-t_2 = t_1 + 2 - 1 = 0 + 1 = 1
-\]
-
----
-
-## ● 예제 3 일반해 구하기
-
-초기 조건을 사용하여 일반해 완성:
-
-\[
-t_n = \frac{n(n-1)}{2}
-\]
-
----
-
-## ● 비동차 선형 점화식 예제 4 풀이
-
-\[
-t_n - 2t_{n-1} = n + 2^n \quad (n > 1), \quad t_1 = 0
-\]
-
-- 동차식에서 유도한 특성 방정식:
-
-\[
-t_n - 2t_{n-1} = 0 \quad \Rightarrow \quad r^1 - 2 = 0
-\]
-
-- 비동차 항에서 유도된 항:
-
-\[
-(r - 1)^{1+1}, \quad (r - 2)^{0+1}
-\]
-
-→ 항 분석:
-- \( n = (1^n) n^1 \Rightarrow b = 1, d = 1 \)
-- \( 2^n = (2^n) n^0 \Rightarrow b = 2, d = 0 \)
-
----
-
-## ● 예제 4 계속: 정리 B.3을 통한 특성 방정식 도출
-
-- 동차 항: \( r^1 - 2 = 0 \)
-- 비동차 항: \( (r - 1)^2 \), \( (r - 2)^1 \)
-
-결합하여:
-
-\[
-(r - 2)(r - 1)^2(r - 2) = (r - 2)^2(r - 1)^2
-\]
+|단계|설명|
+|:---:|---|
+|동차식에서 유도한 특성 방정식|$t_n - 2t_{n-1} = 0 \Rightarrow r^1 - 2 = 0$|
+|비동차 항에서 유도된 항|$(r - 1)^{1+1}, (r - 2)^{0+1}$|
+|→ 항 분석|$n = (1^n) n^1 \Rightarrow b = 1, d = 1$<bt>$2^n = (2^n) n^0 \Rightarrow b = 2, d = 0$|
+|정리 B.3을 통한 특성 방정식 도출|동차 항: $r^1 - 2 = 0$<br>비동차 항: $(r - 1)^2$, $(r - 2)^1$|
+|결합하여|$(r - 2)(r - 1)^2(r - 2) = (r - 2)^2(r - 1)^2$|
 
 
 
+<br>
+<br>
 
 ## 변수 치환을 이용한 점화식 풀이 
 
@@ -308,105 +245,48 @@ t_n - 2t_{n-1} = 0 \quad \Rightarrow \quad r^1 - 2 = 0
 
 $T(n) = T\left(\frac{n}{2}\right) + 1 \quad \text{(단, } n > 1, \text{ n은 2의 거듭제곱)}, \quad T(1) = 1$
 
-- 아래와 같이 점화식을 변형:
-
-$n = 2^k \Rightarrow k = \log_2 n$
-
-- 점화식에 $n = 2^k$를 대입:
-
-$T(2^k) = T\left(\frac{2^k}{2}\right) + 1 = T(2^{k-1}) + 1$
-
-
-- $t_k = T(2^k)$로 두면,
-
-$t_k = t_{k-1} + 1$
-
-- 정리 B.3에 따라 해는:
-
-$t_k = c_1 + c_2 k$
-
-
-
-- 원래 점화식의 일반해를 얻기 위해:
-
-① $T(2^k) = t_k = c_1 + c_2 k$ 
-② $k = \log_2 n$ 대입
-
-$T(n) = c_1 + c_2 \log_2 n$
-
-- 초기 조건 $T(1) = 1$을 이용하면:
-
-$T(n) = 1 + \log_2 n$
+|단계|설명|
+|:---:|---|
+|아래와 같이 점화식을 변형|$n = 2^k \Rightarrow k = \log_2 n$
+|점화식에 $n = 2^k$를 대입|$T(2^k) = T\left(\frac{2^k}{2}\right) + 1 = T(2^{k-1}) + 1$<br>$t_k = T(2^k)$로 두면,$t_k = t_{k-1} + 1$|
+|정리 B.3에 따라 해는|$t_k = c_1 + c_2 k$|
+|원래 점화식의 일반해를 얻기 위해|① $T(2^k) = t_k = c_1 + c_2 k$ <br>② $k = \log_2 n$ 대입<br>$T(n) = c_1 + c_2 \log_2 n$|
+|초기 조건 $T(1) = 1$을 이용하면|$T(n) = 1 + \log_2 n$|
 
 
 
 **[ 예제 2 ]**
 
-\[
-T(n) = 7T\left(\frac{n}{2}\right) + 18\left(\frac{n}{2}\right)^2, \quad T(1) = 0
-\]
+$T(n) = 7T\left(\frac{n}{2}\right) + 18\left(\frac{n}{2}\right)^2, \quad T(1) = 0$
 
-- \( n = 2^k \Rightarrow k = \log_2 n \)
+$n = 2^k \Rightarrow k = \log_2 n$
 
-- \( n = 2^k \)를 대입하면:
-
-\[
-T(2^k) = 7T(2^{k-1}) + 18(2^{k-1})^2
-\]
-
-
-\[
-t_k = 7t_{k-1} + 18(2^{k-1})^2 = 7t_{k-1} + 18 \cdot 4^{k-1}
-\]
-
-\[
-= 7t_{k-1} + 4^k \cdot \left(\frac{18}{4}\right)
-\]
-
-- 정리 B.3에 따라:
-
-\[
-t_k = c_1 \cdot 7^k + c_2 \cdot 4^k
-\]
-
-
-원래 점화식의 일반해 구하기
-
-- \( T(2^k) = t_k = c_1 \cdot 7^k + c_2 \cdot 4^k \)
-
-- \( k = \log_2 n \) 대입:
-
-\[
-T(n) = c_1 \cdot n^{\log_2 7} + c_2 \cdot n^2
-\]
-
-- 초기 조건 \( T(1) = 0 \)을 대입:
-
-\[
-T(n) = 6n^{\log_2 7} - 6n^2 \approx 6n^{2.81} - 6n^2
-\]
+|단계|설명|
+|:---:|---|
+|$n = 2^k$를 대입하면|$T(2^k) = 7T(2^{k-1}) + 18(2^{k-1})^2$<br>$t_k = 7t_{k-1} + 18(2^{k-1})^2 = 7t_{k-1} + 18 \cdot 4^{k-1}$<br>$= 7t_{k-1} + 4^k \cdot \left(\frac{18}{4}\right)$|
+|정리 B.3에 따라|$t_k = c_1 \cdot 7^k + c_2 \cdot 4^k$|
+|원래 점화식의 일반해 구하기|$T(2^k) = t_k = c_1 \cdot 7^k + c_2 \cdot 4^k$|
+|$k = \log_2 n$ 대입|$T(n) = c_1 \cdot n^{\log_2 7} + c_2 \cdot n^2
+$|
+|초기 조건 $T(1) = 0$을 대입|$T(n) = 6n^{\log_2 7} - 6n^2 \approx 6n^{2.81} - 6n^2$|
 
 
 
 ## Substitution(대입법)을 이용한 재귀식 풀이 
 
 **[ 예제 1 ]**
-\[
-t_n = t_{n-1} + n \quad \text{(for } n > 1) \\
-t_1 = 1
-\]
+
+$t_n = t_{n-1} + n \quad \text{(for } n > 1) \\
+t_1 = 1$
 
 - 귀납법과 반대처럼, \(n\)부터 1까지 거꾸로 시작  
-\[
-\begin{align*}
-t_n &= t_{n-1} + n \\
-t_{n-1} &= t_{n-2} + n - 1 \\
-t_{n-2} &= t_{n-3} + n - 2 \\
+
+$t_n &= t_{n-1} + n$<br>
+$t_{n-1} &= t_{n-2} + n - 1$
+$t_{n-2} &= t_{n-3} + n - 2$
 &\vdots \\
-t_2 &= t_1 + 2 \\
-t_1 &= 1
-\end{align*}
-\]
+$t_2 &= t_1 + 2$
+$t_1 &= 1$
 
 *  
 - 각 등식을 대입해서 \(t_n\)을 구함:
