--- a/_posts/develop/ds_ai/2025-03-24-al5-2.md
+++ b/_posts/develop/ds_ai/2025-03-24-al5-2.md
@@ -279,64 +279,25 @@ $|
 $t_n = t_{n-1} + n \quad \text{(for } n > 1) \\
 t_1 = 1$
 
-- 귀납법과 반대처럼, \(n\)부터 1까지 거꾸로 시작  
 
-$t_n &= t_{n-1} + n$<br>
-$t_{n-1} &= t_{n-2} + n - 1$
-$t_{n-2} &= t_{n-3} + n - 2$
-&\vdots \\
-$t_2 &= t_1 + 2$
-$t_1 &= 1$
+|단계|설명|
+|:---:|---|
+|귀납법과 반대처럼, $n$부터 1까지 거꾸로 시작|$t_n = t_{n-1} + n$<br>$t_{n-1} = t_{n-2} + n - 1$<br>$t_{n-2} = t_{n-3} + n - 2$<br>
+$\vdots$<br>$t_2 = t_1 + 2$<br>$t_1 4= 1$|
+|각 등식을 대입해서 $t_n$을 구함|$t_n = t_{n-1} + n$<br>$= t_{n-2} + (n - 1) + n$<br>$= t_{n-3} + (n - 2) + (n - 1) + n$<br>$\vdots$<br>$= t_1 + 2 + \cdots + (n - 2) + (n - 1) + n$
+$= 1 + 2 + \cdots + (n - 1) + n$<br>$= \sum_{i=1}^n i = \frac{n(n+1)}{2}$|
 
-*  
-- 각 등식을 대입해서 \(t_n\)을 구함:
-
-\[
-\begin{align*}
-t_n &= t_{n-1} + n \\
-&= t_{n-2} + (n - 1) + n \\
-&= t_{n-3} + (n - 2) + (n - 1) + n \\
-&\vdots \\
-&= t_1 + 2 + \cdots + (n - 2) + (n - 1) + n \\
-&= 1 + 2 + \cdots + (n - 1) + n \\
-&= \sum_{i=1}^n i = \frac{n(n+1)}{2}
-\end{align*}
-\]
 
 
 **[ 예제 2 ]**
 
-\[
-t_n = t_{n-1} + \frac{2}{n} \quad (n > 1), \quad t_1 = 0
-\]
+$t_n = t_{n-1} + \frac{2}{n} (n > 1), t_1 = 04
 
-- 귀납법과 반대로 \(n\)에서 1로 진행:
-
-\[
-\begin{align*}
-t_n &= t_{n-1} + \frac{2}{n} \\
-t_{n-1} &= t_{n-2} + \frac{2}{n - 1} \\
-t_{n-2} &= t_{n-3} + \frac{2}{n - 2} \\
-&\vdots \\
-t_2 &= t_1 + \frac{2}{2} \\
-t_1 &= 0
-\end{align*}
-\]
-
-
-- 각 등식을 대입해서 \(t_n\) 구하기:
-
-\[
-\begin{align*}
-t_n &= t_{n-1} + \frac{2}{n} \\
-&= t_{n-2} + \frac{2}{n - 1} + \frac{2}{n} \\
-&= t_{n-3} + \frac{2}{n - 2} + \frac{2}{n - 1} + \frac{2}{n} \\
-&\vdots \\
-&= t_1 + \frac{2}{2} + \cdots + \frac{2}{n - 2} + \frac{2}{n - 1} + \frac{2}{n} \\
-&= 0 + \cdots + \frac{2}{n - 2} + \frac{2}{n - 1} + \frac{2}{n} \\
-&= 2 \sum_{i=2}^n \frac{1}{i} \approx 2 \ln n
-\end{align*}
-\]
+|단계|설명|
+|:---:|---|
+|귀납법과 반대로 $n$에서 1로 진행|$t_n = t_{n-1} + \frac{2}{n}$<br>$t_{n-1} = t_{n-2} + \frac{2}{n - 1}$<br>$t_{n-2} = t_{n-3} + \frac{2}{n - 2}$<br>$\vdots$<br>
+$t_2 = t_1 + \frac{2}{2}$<br>$t_1 = 0$|
+|각 등식을 대입해서 $t_n$ 구하기|$t_n &= t_{n-1} + \frac{2}{n}$<br>$= t_{n-2} + \frac{2}{n - 1} + \frac{2}{n}$<br>$= t_{n-3} + \frac{2}{n - 2} + \frac{2}{n - 1} + \frac{2}{n}4$<br>$\vdots$<br>$= t_1 + \frac{2}{2} + \cdots + \frac{2}{n - 2} + \frac{2}{n - 1} + \frac{2}{n}4$<br>$= 0 + \cdots + \frac{2}{n - 2} + \frac{2}{n - 1} + \frac{2}{n}4$<br>$= 2 \sum_{i=2}^n \frac{1}{i} \approx 2 \ln n$|
 
 
 
