--- a/_posts/develop/ds_ai/2025-03-24-al5-2.md
+++ b/_posts/develop/ds_ai/2025-03-24-al5-2.md
@@ -206,7 +206,7 @@ $t_0 = 0, \quad t_1 = 12$
 
 **[ 비동차 선형 점화식 예제 3 풀이 ]**
 
-$t_n - t_{n-1} = n - 1 \quad (n > 0), \quad t_0 = 04
+$t_n - t_{n-1} = n - 1 \quad (n > 0), \quad t_0 = 0$
 
 |단계|설명|
 |:---:|---|
@@ -243,7 +243,7 @@ $t_n - 2t_{n-1} = n + 2^n \quad (n > 1), \quad t_1 = 0$
 
 **[ 예제 1 ]**
 
-$T(n) = T\left(\frac{n}{2}\right) + 1 \quad \text{(단, } n > 1, \text{ n은 2의 거듭제곱)}, \quad T(1) = 1$
+$T(n) = T\left(\frac{n}{2}\right) + 1$ (단, $n > 1$, $n$은 $2$의 거듭제곱), $T(1) = 1$
 
 |단계|설명|
 |:---:|---|
@@ -266,8 +266,7 @@ $n = 2^k \Rightarrow k = \log_2 n$
 |$n = 2^k$를 대입하면|$T(2^k) = 7T(2^{k-1}) + 18(2^{k-1})^2$<br>$t_k = 7t_{k-1} + 18(2^{k-1})^2 = 7t_{k-1} + 18 \cdot 4^{k-1}$<br>$= 7t_{k-1} + 4^k \cdot \left(\frac{18}{4}\right)$|
 |정리 B.3에 따라|$t_k = c_1 \cdot 7^k + c_2 \cdot 4^k$|
 |원래 점화식의 일반해 구하기|$T(2^k) = t_k = c_1 \cdot 7^k + c_2 \cdot 4^k$|
-|$k = \log_2 n$ 대입|$T(n) = c_1 \cdot n^{\log_2 7} + c_2 \cdot n^2
-$|
+|$k = \log_2 n$ 대입|$T(n) = c_1 \cdot n^{\log_2 7} + c_2 \cdot n^2$|
 |초기 조건 $T(1) = 0$을 대입|$T(n) = 6n^{\log_2 7} - 6n^2 \approx 6n^{2.81} - 6n^2$|
 
 
@@ -276,70 +275,57 @@ $|
 
 **[ 예제 1 ]**
 
-$t_n = t_{n-1} + n \quad \text{(for } n > 1) \\
-t_1 = 1$
+$t_n = t_{n-1} + n \quad \text{(for } n > 1) t_1 = 1$
 
 
 |단계|설명|
 |:---:|---|
-|귀납법과 반대처럼, $n$부터 1까지 거꾸로 시작|$t_n = t_{n-1} + n$<br>$t_{n-1} = t_{n-2} + n - 1$<br>$t_{n-2} = t_{n-3} + n - 2$<br>
-$\vdots$<br>$t_2 = t_1 + 2$<br>$t_1 4= 1$|
-|각 등식을 대입해서 $t_n$을 구함|$t_n = t_{n-1} + n$<br>$= t_{n-2} + (n - 1) + n$<br>$= t_{n-3} + (n - 2) + (n - 1) + n$<br>$\vdots$<br>$= t_1 + 2 + \cdots + (n - 2) + (n - 1) + n$
-$= 1 + 2 + \cdots + (n - 1) + n$<br>$= \sum_{i=1}^n i = \frac{n(n+1)}{2}$|
+|귀납법과 반대처럼, $n$부터 1까지 거꾸로 시작|$t_n = t_{n-1} + n$<br>$t_{n-1} = t_{n-2} + n - 1$<br>$t_{n-2} = t_{n-3} + n - 2$<br>$\vdots$<br>$t_2 = t_1 + 2$<br>$t_1 4= 1$|
+|각 등식을 대입해서 $t_n$을 구함|$t_n = t_{n-1} + n$<br>$= t_{n-2} + (n - 1) + n$<br>$= t_{n-3} + (n - 2) + (n - 1) + n$<br>$\vdots$<br>$= t_1 + 2 + \cdots + (n - 2) + (n - 1) + n$<br>$= 1 + 2 + \cdots + (n - 1) + n$<br>$= \sum_{i=1}^n i = \frac{n(n+1)}{2}$|
 
 
 
 **[ 예제 2 ]**
 
-$t_n = t_{n-1} + \frac{2}{n} (n > 1), t_1 = 04
+$t_n = t_{n-1} + \frac{2}{n} (n > 1), t_1 = 0$
 
 |단계|설명|
 |:---:|---|
-|귀납법과 반대로 $n$에서 1로 진행|$t_n = t_{n-1} + \frac{2}{n}$<br>$t_{n-1} = t_{n-2} + \frac{2}{n - 1}$<br>$t_{n-2} = t_{n-3} + \frac{2}{n - 2}$<br>$\vdots$<br>
-$t_2 = t_1 + \frac{2}{2}$<br>$t_1 = 0$|
-|각 등식을 대입해서 $t_n$ 구하기|$t_n &= t_{n-1} + \frac{2}{n}$<br>$= t_{n-2} + \frac{2}{n - 1} + \frac{2}{n}$<br>$= t_{n-3} + \frac{2}{n - 2} + \frac{2}{n - 1} + \frac{2}{n}4$<br>$\vdots$<br>$= t_1 + \frac{2}{2} + \cdots + \frac{2}{n - 2} + \frac{2}{n - 1} + \frac{2}{n}4$<br>$= 0 + \cdots + \frac{2}{n - 2} + \frac{2}{n - 1} + \frac{2}{n}4$<br>$= 2 \sum_{i=2}^n \frac{1}{i} \approx 2 \ln n$|
+|귀납법과 반대로 $n$에서 1로 진행|$t_n = t_{n-1} + \frac{2}{n}$<br>$t_{n-1} = t_{n-2} + \frac{2}{n - 1}$<br>$t_{n-2} = t_{n-3} + \frac{2}{n - 2}$<br>$\vdots$<br>$t_2 = t_1 + \frac{2}{2}$<br>$t_1 = 0$|
+|각 등식을 대입해서 $t_n$ 구하기|$t_n = t_{n-1} + \frac{2}{n}$<br>$= t_{n-2} + \frac{2}{n - 1} + \frac{2}{n}$<br>$= t_{n-3} + \frac{2}{n - 2} + \frac{2}{n - 1} + \frac{2}{n}4$<br>$\vdots$<br>$= t_1 + \frac{2}{2} + \cdots + \frac{2}{n - 2} + \frac{2}{n - 1} + \frac{2}{n}4$<br>$= 0 + \cdots + \frac{2}{n - 2} + \frac{2}{n - 1} + \frac{2}{n}4$<br>$= 2 \sum_{i=2}^n \frac{1}{i} \approx 2 \ln n$|
 
 
 
 ## 시간 복잡도
 n이 어떤 양의 상수 b의 거듭제곱일 때의 결과를 일반적인 n으로 확장하기
 
-**• 네 가지 시간 복잡도 함수**
+**[ 네 가지 시간 복잡도 함수 ]**
 
-1. (a) **엄격히 증가하는 함수 (Strictly Increasing)**  
-   - 항상 증가
-
-2. (b) **비감소 함수 (Nondecreasing)**  
-   - 절대 감소하지 않음
-
-3. (c) **비비감소 함수가 아님 (Not Nondecreasing)**  
-   - 오르내림 반복
-
-4. (d) **궁극적으로 비감소하는 함수 (Eventually Nondecreasing)**  
-   - 일정 시점 이후로는 증가 또는 유지
+|종류|설명|
+|:---:|---|
+|**엄격히 증가하는 함수 (Strictly Increasing)**|항상 증가|
+|**비감소 함수 (Nondecreasing)**|절대 감소하지 않음|
+|**비비감소 함수가 아님 (Not Nondecreasing)**|오르내림 반복|
+|**궁극적으로 비감소하는 함수 (Eventually Nondecreasing)**|일정 시점 이후로는 증가 또는 유지|
 
 
-**• 증가하는 시간 복잡도**
+**[ 증가하는 시간 복잡도 ]**<br>
+**`정의`**  <br>
+>복잡도 함수 f(n)이 항상 n이 증가함에 따라 커지면 이를 **엄격히 증가함(strictly increasing)** 이라고 한다<br>
+• 즉, n₁ > n₂ 이면, → f(n₁) > f(n₂)
 
-- **정의**  
-  복잡도 함수 f(n)이 항상 n이 증가함에 따라 커지면 이를 **엄격히 증가함(strictly increasing)** 이라고 한다.  
-  즉, n₁ > n₂ 이면,  
-  → f(n₁) > f(n₂)
-
-- **예시 함수들**  
-  - log₂n, n, n log n, n², 2ⁿ 등 (단, n ≥ 0일 때)
+**`예시 함수들`**  <br>
+• log₂n, n, n log n, n², 2ⁿ 등 (단, n ≥ 0일 때)
 
 
 
-**• 비감소 시간 복잡도**
+**[ 비감소 시간 복잡도 ]**<br>
+**정의**  <br>
+> 복잡도 함수 f(n)이 n이 증가함에 따라 절대 감소하지 않으면, 이를 **비감소함(nondecreasing)** 이라고 한다.  
+• 즉, n₁ > n₂ 이면, → f(n₁) ≥ f(n₂)
 
-- **정의**  
-  복잡도 함수 f(n)이 n이 증가함에 따라 절대 감소하지 않으면, 이를 **비감소함(nondecreasing)** 이라고 한다.  
-  즉, n₁ > n₂ 이면,  
-  → f(n₁) ≥ f(n₂)
-
-- **설명**  
-  대부분의 시간 복잡도 함수는 비감소 함수이다.
+**설명**  <br>
+대부분의 시간 복잡도 함수는 비감소 함수이다.
 
 
 
