--- a/_posts/develop/ds_ai/2025-03-21-al03.md
+++ b/_posts/develop/ds_ai/2025-03-21-al03.md
@@ -33,9 +33,7 @@ sidebar:
 **(1) 입력크기(input size) 결정하기**<br>
 • 대부분의 알고리즘에서는 입력 크기를 정의할 수 있는 합리적인 방법을 찾을 수 있음<br>
 • 입력 크기 ≠ 입력의 크기 자체<br>
-`참고` <br>
-이진 표현(binary representation)을 사용할 경우, 입력 n을 인코딩하는 데 필요한 비트 수는 lg(n)+1<br>
-예를 들어, n=13일 경우, 이진수 표현은 1101이며, 입력 크기 = 4비트
+`참고` 예를 들어, n=13일 경우, 이진수 표현은 1101이며, 입력 크기 = 4비트(lg(n)+1)<br>
 • 알고리즘의 효율성을 `종속적인 요인에 따라 분석하지 말 것` (입력크기는 독립적)<br>
 ❌ CPU 사이클 수는 알고리즘의 성능을 결정하는 기준이 될 수 없음<br>
 ❌ 모든 명령어를 개별적으로 계산하는 것은 부적절: 언어 / 개발자의 코드 스타일에 따라 실행되는 명령어 수가 달라짐<br>
