--- a/_posts/develop/ds_ai/2025-03-22-al-4.md
+++ b/_posts/develop/ds_ai/2025-03-22-al-4.md
@@ -183,10 +183,10 @@ $g(n) \in o(f(n)) \Rightarrow g(n) \in O(f(n)),\ g(n) \notin \Omega(f(n))$
 
 **[ 예시 ]**
 
-> $g(n) = \begin{cases}n & \text{(짝수일 때)} \\1 & \text{(홀수일 때)}\end{cases}$
+> $g(n) = \begin{cases}n & \text{(짝수일 때)} 1 & \text{(홀수일 때)}\end{cases}$
 
 • 평균적으로 $O(n)$에 속함
-• 그러나 일정하게 크지 않기 때문에 $\Omega(n)4에 속하지 않음
+• 그러나 일정하게 크지 않기 때문에 $\Omega(n)$에 속하지 않음<br>
 • ⇒ $g(n) \in O(n) - \Omega(n)$, 하지만 $o(n)$에도 속하지 않음
 
 <br>
