--- a/_posts/develop/ds_ai/2025-03-22-al-4.md
+++ b/_posts/develop/ds_ai/2025-03-22-al-4.md
@@ -93,10 +93,12 @@ sidebar:
 • $5n^2 \leq 5n^2$, ⇒ $c = 5, N = 0$
 
 > 교환 정렬 (Exchange Sort)  <br>
-• $T(n) = \frac{n(n-1)}{2} \leq \frac{n^2}{2} \Rightarrow T(n) \in O(n^2)$
+• $T(n) = \frac{n(n-1)}{2} \leq \frac{n^2}{2} \Rightarrow T(n) \in O(n^2)$<br>
+• ⇒ $c = 1/2$, $N = 0$
 
-> 반례: $n^2 \in O(n^2 + 10n)$ <br>
+> $n^2 \in O(n^2 + 10n)$ <br>
 • 가능함! $n^2 \leq 1 \cdot (n^2 + 10n)$ (단순한 함수만 오는 게 아니라 복합 함수도 가능)
+• ⇒ $c = 1$, $N = 0$
 
 📈 시각적 설명:  
 초기에는 $g(n)$이 $c \cdot f(n)$보다 클 수 있지만,  
@@ -118,16 +120,21 @@ sidebar:
 
 **예제**
 
-> $n^2 + 10n \in \Omega(n^2)$
-• $n^2 + 10n \geq n^2$, ⇒ $c = 1, N = 0$
+> $n^2 + 10n \in \Omega(n^2)$<br>
+• $n^2 + 10n \geq n^2$<br>
+• ⇒ $c = 1, N = 0$
 
-> $5n^2 \in \Omega(n^2)$
+> $5n^2 \in \Omega(n^2)$<br>
+• ⇒ $5n^2 \geq 1 \cdot n&2$<br>
 • ⇒ $c = 1, N = 0$
 
 > 교환 정렬  
   $T(n) = \frac{n(n-1)}{2} \geq \frac{1}{4}n^2 \quad \text{(for } n \geq 2 \text{)}$
+• $c = 1/4$, $N = 2$<br>
+• $T(n) \in \Omega(n^2)
 
-> $n^3 \in \Omega(n^2)$
+> $n^3 \in \Omega(n^2)$<br>
+• $n \geq 1$일 때, $n^3 \geq 1 \cdot n^2$<br>
 • 당연히 포함됨 (차수가 더 크므로)
 
 📈 시각적 설명:  
@@ -145,7 +152,7 @@ sidebar:
 > 모든 $n \geq N$에 대해  $c_1 f(n) \leq g(n) \leq c_2 f(n)$
 
 • 즉, $g(n)$이 $f(n)$과 **성장률이 정확히 같은 수준**이라는 뜻<br>
-• **O와 Ω를 동시에 만족**하면 Θ에 속함  
+• **O와 Ω를 동시에 만족**하면 Θ에 속함  <br>
 $\Theta(f(n)) = O(f(n)) \cap \Omega(f(n))$
 
 📌 **정확한 차수의 복잡도 표현**, 즉 **평균적 수행 시간**에 사용
@@ -155,7 +162,7 @@ $\Theta(f(n)) = O(f(n)) \cap \Omega(f(n))$
 **예시**
 
 > 교환 정렬 알고리즘  
-• $T(n) = \frac{n(n-1)}{2} \in \Theta(n^2)$
+• $T(n) = \frac{n(n-1)}{2} \in \Theta(n^2)$<
 
 > $4n^2, 6n^2 + 9, 5n^2 + 2n$ 등도 $\Theta(n^2)$에 속함
 
@@ -163,31 +170,61 @@ $\Theta(f(n)) = O(f(n)) \cap \Omega(f(n))$
 
 ## 소문자 o 표기법 (little-o)
 **[ 정의 ]**
-> 함수 $g(n) \in o(f(n))$란,  
-> **모든** 양의 실수 $c$에 대해 $n \geq N$에서 $g(n) \leq c \cdot f(n)$
+> 주어진 복잡도 함수 $f(n)$에 대해,  <br>
+$o(f(n))$는 다음 조건을 만족하는 모든 복잡도 함수 $g(n)$의 집합<br>
+• **모든 양의 실수 상수 $c$**에 대해, 음이 아닌 정수 $N$이 존재하여,  <br>
+  모든 $n \geq N$에 대해, $g(n) \leq c \cdot f(n)$
 
-• Big-O보다 **더 강한 상한 조건**  
-• 어떤 작은 c라도 만족해야 하므로, **g(n)**은 **f(n)**보다 **훨씬 느린 성장률**을 가져야 함
+• Big-O: **특정 상수 \( c \)**가 존재하면 된다<br>
+• small-o는 **모든 양의 상수 \( c \)**에 대해 조건이 성립해야 한다
 
-**[ 예시 ]**
-
-> $n \in o(n^2)$  
-• $n \leq c \cdot n^2$ → 항상 성립 가능  
-• $c = 0.00001$일 때 $N \geq 100000$
-
-> $n \notin o(5n)$ 
-• 어떤 c에 대해서도 $n \leq c \cdot 5n$ 이 항상 성립할 수 없음 (예: $c = 1/6$)
-
-> 성질 요약:  
-$g(n) \in o(f(n)) \Rightarrow g(n) \in O(f(n)),\ g(n) \notin \Omega(f(n))$
 
 **[ 예시 ]**
+> 만약 $g(n) \in o(f(n)$라면,  <br>
+  $g(n) \leq 0.00001 \cdot f(n)$ 같은 식도 어떤 $N$이후에 성립해야 함
 
-> $g(n) = \begin{cases}n & \text{(짝수일 때)} 1 & \text{(홀수일 때)}\end{cases}$
+👉 결론:  
+• $g(n)$이 $f(n)$에 비해 **의미 없을 정도로 작아진다**면 $g(n) \in o(f(n))$이다<br>
+• 분석 관점에서 보면, 이런 $g(n)$은 $f(n)$보다 **훨씬 더 효율적**
 
-• 평균적으로 $O(n)$에 속함
-• 그러나 일정하게 크지 않기 때문에 $\Omega(n)$에 속하지 않음<br>
-• ⇒ $g(n) \in O(n) - \Omega(n)$, 하지만 $o(n)$에도 속하지 않음
+> 예제 1: $n \in o(n^2)$
+• 어떤 $c > 0$에 대해 $n \leq cn^2$이 성립해야 함<br>
+• 양변을 $cn$으로 나누면: $\frac{1}{c} \leq n$ <br>
+• 따라서 $N \geq \frac{1}{c}$이면 조건 만족
+
+> 예: $c = 0.00001$이면 $N \geq 100{,}000$ 필요<br>
+• 즉, $n \leq 0.00001n^2$
+
+> 예제 2: $n \notin o(5n)$
+• • 귀납기초: $n \in o(5n)$라면  <br>
+귀납단계:<br>
+→ 어떤 $c = \frac{1}{6}$, $N$에 대해 $n \leq \frac{5}{6}n$
+→ 이는 항상 거짓이므로 **모순** 발생<br>
+• 결론: $n \notin o(5n)$
+
+**[ 정리된 정리 (Theorem 1.2) ]**
+> 만약 $g(n) \in o(f(n))$이면,  $g(n) \in O(f(n)) \setminus \Omega(f(n))$<br>
+• 즉, Big-O에는 포함되지만 Big-Omega에는 포함되지 않음
+
+> $g(n) \in o(f(n))$ ⇒ 모든 양의 상수 $c$에 대해  $g(n) \leq c \cdot f(n)$
+
+• 귀류법으로 $g(n) \in \Omega(f(n))$라고 가정하면,  
+  어떤 $c > 0$, $N_1$이 존재해 $g(n) \geq c \cdot f(n)$<br>
+• 그런데 $g(n) \in o(f(n))$이므로 어떤 $N_2$에 대해  
+  $g(n) \leq \frac{c}{2} \cdot f(n)$<br>
+• 두 식은 모순됨 ⇒ 따라서 $(n) \notin \Omega(f(n))$
+
+> 예제 3: 특이한 함수
+$$g(n) =
+\begin{cases}
+n & \text{if } n \text{ is even} \\
+1 & \text{if } n \text{ is odd}
+\end{cases}
+$$
+• 이 함수는 $g(n) \in O(n) \setminus \Omega(n)$ 이지만, $g(n) \notin o(n)$
+• 짝수일 때는 선형이지만,  <br>
+• 홀수일 때는 상수 함수라서 점근적으로는 너무 들쭉날쭉함.
+
 
 <br>
 
