--- a/_posts/develop/ds_ai/2025-03-22-al-4.md
+++ b/_posts/develop/ds_ai/2025-03-22-al-4.md
@@ -208,19 +208,17 @@ $o(f(n))$는 다음 조건을 만족하는 모든 복잡도 함수 $g(n)$의 집
 
 > $g(n) \in o(f(n))$ ⇒ 모든 양의 상수 $c$에 대해  $g(n) \leq c \cdot f(n)$
 
-• 귀류법으로 $g(n) \in \Omega(f(n))$라고 가정하면,  
-  어떤 $c > 0$, $N_1$이 존재해 $g(n) \geq c \cdot f(n)$<br>
-• 그런데 $g(n) \in o(f(n))$이므로 어떤 $N_2$에 대해  
-  $g(n) \leq \frac{c}{2} \cdot f(n)$<br>
+• 귀류법으로 $g(n) \in \Omega(f(n))$라고 가정하면, 어떤 $c > 0$, $N_1$이 존재해 $g(n) \geq c \cdot f(n)$<br>
+• 그런데 $g(n) \in o(f(n))$이므로 어떤 $N_2$에 대해 $g(n) \leq \frac{c}{2} \cdot f(n)$<br>
 • 두 식은 모순됨 ⇒ 따라서 $(n) \notin \Omega(f(n))$
 
 > 예제 3: 특이한 함수
 $$g(n) =
 \begin{cases}
-n & \text{if } n \text{ is even} \\
-1 & \text{if } n \text{ is odd}
+n \text{if } n \text{ is even} \\
+1 \text{if } n \text{ is odd}
 \end{cases}
-$$
+$$<br>
 • 이 함수는 $g(n) \in O(n) \setminus \Omega(n)$ 이지만, $g(n) \notin o(n)$
 • 짝수일 때는 선형이지만,  <br>
 • 홀수일 때는 상수 함수라서 점근적으로는 너무 들쭉날쭉함.
