--- a/_posts/develop/ds_ai/2025-03-22-al-4.md
+++ b/_posts/develop/ds_ai/2025-03-22-al-4.md
@@ -97,7 +97,7 @@ sidebar:
 • ⇒ $c = 1/2$, $N = 0$
 
 > $n^2 \in O(n^2 + 10n)$ <br>
-• 가능함! $n^2 \leq 1 \cdot (n^2 + 10n)$ (단순한 함수만 오는 게 아니라 복합 함수도 가능)
+• 가능함! $n^2 \leq 1 \cdot (n^2 + 10n)$ (단순한 함수만 오는 게 아니라 복합 함수도 가능)<br>
 • ⇒ $c = 1$, $N = 0$
 
 📈 시각적 설명:  
@@ -125,13 +125,13 @@ sidebar:
 • ⇒ $c = 1, N = 0$
 
 > $5n^2 \in \Omega(n^2)$<br>
-• ⇒ $5n^2 \geq 1 \cdot n&2$<br>
+• ⇒ $5n^2 \geq 1 \cdot n^2$<br>
 • ⇒ $c = 1, N = 0$
 
 > 교환 정렬  
-  $T(n) = \frac{n(n-1)}{2} \geq \frac{1}{4}n^2 \quad \text{(for } n \geq 2 \text{)}$
+  $T(n) = \frac{n(n-1)}{2} \geq \frac{1}{4}n^2 \quad \text{(for } n \geq 2 \text{)}$<br>
 • $c = 1/4$, $N = 2$<br>
-• $T(n) \in \Omega(n^2)
+• $T(n) \in \Omega(n^2)$
 
 > $n^3 \in \Omega(n^2)$<br>
 • $n \geq 1$일 때, $n^3 \geq 1 \cdot n^2$<br>
@@ -215,8 +215,8 @@ $o(f(n))$는 다음 조건을 만족하는 모든 복잡도 함수 $g(n)$의 집
 > 예제 3: 특이한 함수
 $$g(n) =
 \begin{cases}
-n \text{if } n \text{ is even} \\
-1 \text{if } n \text{ is odd}
+n \text{ if } n \text{ is even} \\
+1 \text{ if } n \text{ is odd}
 \end{cases}
 $$<br>
 • 이 함수는 $g(n) \in O(n) \setminus \Omega(n)$ 이지만, $g(n) \notin o(n)$
