--- a/_posts/develop/ds_ai/2025-03-22-al-4.md
+++ b/_posts/develop/ds_ai/2025-03-22-al-4.md
@@ -162,7 +162,7 @@ $\Theta(f(n)) = O(f(n)) \cap \Omega(f(n))$
 **예시**
 
 > 교환 정렬 알고리즘  
-• $T(n) = \frac{n(n-1)}{2} \in \Theta(n^2)$<
+• $T(n) = \frac{n(n-1)}{2} \in \Theta(n^2)$, $\Omega(n^2)\Omega(f(n))
 
 > $4n^2, 6n^2 + 9, 5n^2 + 2n$ 등도 $\Theta(n^2)$에 속함
 
@@ -181,8 +181,7 @@ $o(f(n))$는 다음 조건을 만족하는 모든 복잡도 함수 $g(n)$의 집
 
 **[ 예시 ]**
 > 만약 $g(n) \in o(f(n)$라면,  <br>
-  $g(n) \leq 0.00001 \cdot f(n)$ 같은 식도 어떤 $N$이후에 성립해야 함
-
+  $g(n) \leq 0.00001 \cdot f(n)$ 같은 식도 어떤 $N$이후에 성립해야 함<br>
 👉 결론:  
 • $g(n)$이 $f(n)$에 비해 **의미 없을 정도로 작아진다**면 $g(n) \in o(f(n))$이다<br>
 • 분석 관점에서 보면, 이런 $g(n)$은 $f(n)$보다 **훨씬 더 효율적**
@@ -190,13 +189,12 @@ $o(f(n))$는 다음 조건을 만족하는 모든 복잡도 함수 $g(n)$의 집
 > 예제 1: $n \in o(n^2)$
 • 어떤 $c > 0$에 대해 $n \leq cn^2$이 성립해야 함<br>
 • 양변을 $cn$으로 나누면: $\frac{1}{c} \leq n$ <br>
-• 따라서 $N \geq \frac{1}{c}$이면 조건 만족
-
-> 예: $c = 0.00001$이면 $N \geq 100{,}000$ 필요<br>
+• 따라서 $N \geq \frac{1}{c}$이면 조건 만족<br>
+• 예: $c = 0.00001$이면 $N \geq 100{,}000$ 필요<br>
 • 즉, $n \leq 0.00001n^2$
 
-> 예제 2: $n \notin o(5n)$
-• • 귀납기초: $n \in o(5n)$라면  <br>
+> 예제 2: $n \notin o(5n)$<br>
+• 귀납기초: $n \in o(5n)$라면  <br>
 귀납단계:<br>
 → 어떤 $c = \frac{1}{6}$, $N$에 대해 $n \leq \frac{5}{6}n$
 → 이는 항상 거짓이므로 **모순** 발생<br>
@@ -204,10 +202,8 @@ $o(f(n))$는 다음 조건을 만족하는 모든 복잡도 함수 $g(n)$의 집
 
 **[ 정리된 정리 (Theorem 1.2) ]**
 > 만약 $g(n) \in o(f(n))$이면,  $g(n) \in O(f(n)) \setminus \Omega(f(n))$<br>
-• 즉, Big-O에는 포함되지만 Big-Omega에는 포함되지 않음
-
-> $g(n) \in o(f(n))$ ⇒ 모든 양의 상수 $c$에 대해  $g(n) \leq c \cdot f(n)$
-
+• 즉, Big-O에는 포함되지만 Big-Omega에는 포함되지 않음<br>
+• $g(n) \in o(f(n))$ ⇒ 모든 양의 상수 $c$에 대해  $g(n) \leq c \cdot f(n)$<br>
 • 귀류법으로 $g(n) \in \Omega(f(n))$라고 가정하면, 어떤 $c > 0$, $N_1$이 존재해 $g(n) \geq c \cdot f(n)$<br>
 • 그런데 $g(n) \in o(f(n))$이므로 어떤 $N_2$에 대해 $g(n) \leq \frac{c}{2} \cdot f(n)$<br>
 • 두 식은 모순됨 ⇒ 따라서 $(n) \notin \Omega(f(n))$
@@ -219,7 +215,7 @@ n \text{ if } n \text{ is even} \\
 1 \text{ if } n \text{ is odd}
 \end{cases}
 $$<br>
-• 이 함수는 $g(n) \in O(n) \setminus \Omega(n)$ 이지만, $g(n) \notin o(n)$
+• 이 함수는 $g(n) \in O(n) \setminus \Omega(n)$ 이지만, $g(n) \notin o(n)$<br>
 • 짝수일 때는 선형이지만,  <br>
 • 홀수일 때는 상수 함수라서 점근적으로는 너무 들쭉날쭉함.
 
