--- a/_posts/develop/ds_ai/2025-03-22-al-4.md
+++ b/_posts/develop/ds_ai/2025-03-22-al-4.md
@@ -162,7 +162,7 @@ $\Theta(f(n)) = O(f(n)) \cap \Omega(f(n))$
 **예시**
 
 > 교환 정렬 알고리즘  
-• $T(n) = \frac{n(n-1)}{2} \in \Theta(n^2)$, $\Omega(n^2)\Omega(f(n))
+• $T(n) = \frac{n(n-1)}{2} \in \O(n^2)$, $\Omega(n^2)$
 
 > $4n^2, 6n^2 + 9, 5n^2 + 2n$ 등도 $\Theta(n^2)$에 속함
 
