--- a/_posts/develop/ds_ai/2025-03-23-al5.md
+++ b/_posts/develop/ds_ai/2025-03-23-al5.md
@@ -457,9 +457,9 @@ t₃ = t₂ + 1 = 2 + 1 = 3
 |**비동차(비동질) 재귀식**<br>**(Nonhomogeneous Recurrence)**|오른쪽에 독립된 항 존재|
 |**선형 동차 상수 계수 재귀식**|이전 항들의 선형 결합 + 계수가 상수 + 동차|
 |**선형 동차 재귀식**|각 항이 선형으로 나타나고, 상수항이 없고, 이전 항들의 조합으로 구성된 식|
-|동차 선형 상수 계수 재귀식|<br>$7t_n - 3t_{n-1} = 0$<br>$6t_n - 5t_{n-1} + 8t_{n-2} = 0$<br>$8t_n - 4t_{n-3} = 0$|
-|비동차 선형 재귀식||
-|상수 계수를 갖는 비동차 선형 재귀식|nonhomogeneous linear recurrence equation with constant coefficients<br>다음 형태의 점화식 $a_0 t_n + a_1 t_{n-1} + \cdots + a_k t_{n-k} = f(n)$에서 $k$와 $a_i$들은 상수이고 $f(n)$은 0이 아닌 어떤 함수|
+|동차 선형 상수 계수 재귀식|$7t_n - 3t_{n-1} = 0$<br>$6t_n - 5t_{n-1} + 8t_{n-2} = 0$<br>$8t_n - 4t_{n-3} = 0$|
+|**비동차 선형 재귀식**|각 항이 선형으로 나타나며, 오른쪽에 독립된 항(상수나 함수)이 존재하는 재귀식|
+|**상수 계수를 갖는 비동차 선형 재귀식**|nonhomogeneous linear recurrence equation with constant coefficients<br>다음 형태의 점화식 $a_0 t_n + a_1 t_{n-1} + \cdots + a_k t_{n-k} = f(n)$<br>에서 $k$와 $a_i$들은 상수이고 $f(n)$은 0이 아닌 어떤 함수|
 
 <br>
 
@@ -475,8 +475,8 @@ t₃ = t₂ + 1 = 2 + 1 = 3
 • 비동차 재귀식 해법: 비동차 항이 있는 경우, 일반항에 비슷한 꼴의 특수해를 추가
 
 
-• 비동차 점화식을 푸는 일반적인 방법은 **알려져 있지 않음**<br>
-• 그러나 **자주 나오는 특수한 경우**에 대해 방법이 존재함: $a_0 t_n + a_1 t_{n-1} + \cdots + a_k t_{n-k} = b^n p(n)$<br>
+> • 비동차 점화식을 푸는 일반적인 방법은 **알려져 있지 않지만** **자주 나오는 특수한 경우**에 대해 방법이 존재함: <br>
+• $a_0 t_n + a_1 t_{n-1} + \cdots + a_k t_{n-k} = b^n p(n)$<br>
 • $b4$: 상수, $p(n)$: $n$에 대한 다항식
 
 <br>
@@ -495,7 +495,8 @@ t₃ = t₂ + 1 = 2 + 1 = 3
 |정리 B.3 (Theorem B.3)|
 |---|
 |• 다음 형태의 비동차 선형 점화식은 다음과 같은 특성 방정식을 갖는 동차 선형 점화식으로 변환할 수 있다<br>
-$a_0 t_n + a_1 t_{n-1} + \cdots + a_k t_{n-k} = b^n p(n)$ => $(a_0 r^k + a_1 r^{k-1} + \cdots + a_k)(r - b)^{d+1} = 0$<br>• 여기서 $d$는 $p(n)$의 차수(Degree)<br>이 특성 방정식은 두 부분으로 이루어진다<br>(해당 동차 점화식의 특성 방정식, 비동차 항으로부터 유도된 항) <br>• 만약 오른쪽 항에 $b^n p(n)$ 같은 항이 둘 이상 있다면:<br> 각각의 항이 특성 방정식에 하나의 항을 더하게 된다|
+$a_0 t_n + a_1 t_{n-1} + \cdots + a_k t_{n-k} = b^n p(n)$ => $(a_0 r^k + a_1 r^{k-1} + \cdots + a_k)(r - b)^{d+1} = 0$<br>• 여기서 $d$는 $p(n)$의 차수(Degree)<br>
+• 이 특성 방정식은 두 부분으로 이루어진다<br>(해당 동차 점화식의 특성 방정식, 비동차 항으로부터 유도된 항) <br>• 만약 오른쪽 항에 $b^n p(n)$ 같은 항이 둘 이상 있다면:<br> 각각의 항이 특성 방정식에 하나의 항을 더하게 된다|
 
 
 <br>
@@ -515,7 +516,7 @@ $a_0 t_n + a_1 t_{n-1} + \cdots + a_k t_{n-k} = b^n p(n)$ => $(a_0 r^k + a_1 r^{
 |**정당성 증명 (Proof of the correctness)**|$n = 1$일 때: $t_1 = 1 = \log 1 + 1$|
 |**귀납 가정 (Induction hypothesis)**|$t_n = \log n + 1$|
 |**귀납 단계 (Induction step)**|$2n$을 대입하여 다음을 보여야 함:<br>$t_{2n} = \log (2n) + 1$|
-|**결론**|$t_{2n} = t_{(2n)/2} + 1 = t_n + 1 = \log n + 1 + 1$<br>$= \log n + \log 2 + 1$<br>$= \log (2n) + 1$|
+|**결론 (Conclusion)**|$t_{2n} = t_{(2n)/2} + 1 = t_n + 1 = \log n + 1 + 1$<br>$= \log n + \log 2 + 1$<br>$= \log (2n) + 1$|
 
 <br>
 
@@ -524,12 +525,12 @@ $a_0 t_n + a_1 t_{n-1} + \cdots + a_k t_{n-k} = b^n p(n)$ => $(a_0 r^k + a_1 r^{
 |구분|내용|
 |:---:|---|
 |**주어진 재귀식**|$t_n = 7t_{n/2}$ (단, $n > 1$ ,$n$은 $2$의 거듭제곱)<br>$t_1 = 1$|
-|**점검 (Inspection)**|$t_2 = 7t_{2/2} = 7t_1 = 7$<br>$t_4 = 7t_{4/2} = 7t_2 = 7^2$<br>$t_8 = 7t_{8/2} = 7t_4 = 7^3$<br>$t_{16} = 7t_{16/2} = 7t_8 = 7^4$|
-|**추정 (Estimation)**|$t_n = 7^{\log n}$|
-|**정당성 증명 (Proof of the correctness)**|$n = 1$ 일 때: $t_1 = 1 = 7^0 = 7^{\log 1}$|
-|**귀납 가정 (Induction hypothesis)**|$t_n = 7^{\log n}$|
-|**귀납 단계 (Induction step)**|$t_{2n} = 7^{\log (2n)}$|
-|**결론 (Conclusion)**|$t_{2n} = 7t_{(2n)/2} = 7t_n = 7 \times 7^{\log n} = 7^{1 + \log n} = 7^{\log 2 + \log n} = 7^{\log (2n)}$<br>$\therefore t_n = n^{\log 7} \approx n^{2.81}$ (왜냐하면 $7^{\log n} = n^{\log 7}$)
+|**점검**|$t_2 = 7t_{2/2} = 7t_1 = 7$<br>$t_4 = 7t_{4/2} = 7t_2 = 7^2$<br>$t_8 = 7t_{8/2} = 7t_4 = 7^3$<br>$t_{16} = 7t_{16/2} = 7t_8 = 7^4$|
+|**추정**|$t_n = 7^{\log n}$|
+|**정당성 증명**|$n = 1$ 일 때: $t_1 = 1 = 7^0 = 7^{\log 1}$|
+|**귀납 가정**|$t_n = 7^{\log n}$|
+|**귀납 단계**|$t_{2n} = 7^{\log (2n)}$|
+|**결론**|$t_{2n} = 7t_{(2n)/2} = 7t_n = 7 \times 7^{\log n} = 7^{1 + \log n} = 7^{\log 2 + \log n} = 7^{\log (2n)}$<br>$\therefore t_n = n^{\log 7} \approx n^{2.81}$ (왜냐하면 $7^{\log n} = n^{\log 7}$)
 
 <br>
 
