--- a/_posts/develop/ds_ai/2025-03-23-al5.md
+++ b/_posts/develop/ds_ai/2025-03-23-al5.md
@@ -538,8 +538,7 @@ $a_0 t_n + a_1 t_{n-1} + \cdots + a_k t_{n-k} = b^n p(n)$ => $(a_0 r^k + a_1 r^{
 
 |구분|내용|
 |:---:|---|
-|**주어진 재귀식**|$t_n = 2t_{n/2} + n - 1$ (단, $n > 1, n$은 2의 거듭제곱)<br>
-$t_1 = 0$|
+|**주어진 재귀식**|$t_n = 2t_{n/2} + n - 1$ (단, $n > 1, n$은 2의 거듭제곱)<br>$t_1 = 0$|
 |**점검 (Inspection)**|$t_2 = 2t_{2/2} + 2 - 1 = 2t_1 + 1 = 1$<br>$t_4 = 2t_{4/2} + 4 - 1 = 2t_2 + 3 = 5$<br>$t_8 = 2t_{8/2} + 8 - 1 = 2t_4 + 7 = 17$<br>$t_{16} = 2t_{16/2} + 16 - 1 = 2t_8 + 15 = 49$|
 |**추정 (Estimation)**|???|
 
