--- a/_posts/develop/ds_ai/2025-03-23-al5.md
+++ b/_posts/develop/ds_ai/2025-03-23-al5.md
@@ -494,9 +494,7 @@ t₃ = t₂ + 1 = 2 + 1 = 3
 
 |정리 B.3 (Theorem B.3)|
 |---|
-|• 다음 형태의 비동차 선형 점화식은 다음과 같은 특성 방정식을 갖는 동차 선형 점화식으로 변환할 수 있다<br>
-$a_0 t_n + a_1 t_{n-1} + \cdots + a_k t_{n-k} = b^n p(n)$ => $(a_0 r^k + a_1 r^{k-1} + \cdots + a_k)(r - b)^{d+1} = 0$<br>• 여기서 $d$는 $p(n)$의 차수(Degree)<br>
-• 이 특성 방정식은 두 부분으로 이루어진다<br>(해당 동차 점화식의 특성 방정식, 비동차 항으로부터 유도된 항) <br>• 만약 오른쪽 항에 $b^n p(n)$ 같은 항이 둘 이상 있다면:<br> 각각의 항이 특성 방정식에 하나의 항을 더하게 된다|
+|• 다음 형태의 비동차 선형 점화식은 다음과 같은 특성 방정식을 갖는 동차 선형 점화식으로 변환할 수 있다<br>$a_0 t_n + a_1 t_{n-1} + \cdots + a_k t_{n-k} = b^n p(n)$ => $(a_0 r^k + a_1 r^{k-1} + \cdots + a_k)(r - b)^{d+1} = 0$<br>• 여기서 $d$는 $p(n)$의 차수(Degree)<br>• 이 특성 방정식은 두 부분으로 이루어진다<br>(해당 동차 점화식의 특성 방정식, 비동차 항으로부터 유도된 항) <br>• 만약 오른쪽 항에 $b^n p(n)$ 같은 항이 둘 이상 있다면:<br> 각각의 항이 특성 방정식에 하나의 항을 더하게 된다|
 
 
 <br>
