--- a/_posts/develop/ds_ai/2025-03-23-al5.md
+++ b/_posts/develop/ds_ai/2025-03-23-al5.md
@@ -457,7 +457,7 @@ t₃ = t₂ + 1 = 2 + 1 = 3
 |**비동차(비동질) 재귀식**<br>**(Nonhomogeneous Recurrence)**|오른쪽에 독립된 항 존재|
 |**선형 동차 상수 계수 재귀식**|이전 항들의 선형 결합 + 계수가 상수 + 동차|
 |**선형 동차 재귀식**|각 항이 선형으로 나타나고, 상수항이 없고, 이전 항들의 조합으로 구성된 식|
-|동차 선형 상수 계수 재귀식|$7t_n - 3t_{n-1} = 0$<br>$6t_n - 5t_{n-1} + 8t_{n-2} = 0$<br>$8t_n - 4t_{n-3} = 0$|
+|**동차 선형 상수 계수 재귀식**|$7t_n - 3t_{n-1} = 0$<br>$6t_n - 5t_{n-1} + 8t_{n-2} = 0$<br>$8t_n - 4t_{n-3} = 0$|
 |**비동차 선형 재귀식**|각 항이 선형으로 나타나며, 오른쪽에 독립된 항(상수나 함수)이 존재하는 재귀식|
 |**상수 계수를 갖는 비동차 선형 재귀식**|nonhomogeneous linear recurrence equation with constant coefficients<br>다음 형태의 점화식 $a_0 t_n + a_1 t_{n-1} + \cdots + a_k t_{n-k} = f(n)$<br>에서 $k$와 $a_i$들은 상수이고 $f(n)$은 0이 아닌 어떤 함수|
 
