--- a/_posts/develop/ds_ai/2025-03-24-al5-2.md
+++ b/_posts/develop/ds_ai/2025-03-24-al5-2.md
@@ -10,16 +10,8 @@ sidebar:
    nav: "docs"
 ---
 <br>
-
-
-• 수학적 귀납법 (Induction): 귀납적 방식으로 일반해가 맞는지 증명<br>
-• 특성방정식 (Characteristic Equation): 선형 동차 상수 계수 재귀식에서 일반해를 구함<br>
-• 곱셈을 이용한 대입 (Substitution): 식을 반복 대입해 일반항 추정<br>
-• 변수 치환 (Change of Variables): 복잡한 식을 단순화하기 위해 변수 변환<br>
-• 생성 함수 (Generating Functions): 함수 형태로 수열 표현 후 해석<br>
-• 마스터 정리 (Master Theorem): 분할정복 알고리즘의 시간 복잡도 분석용<br>
-• 비동차 재귀식 해법: 비동차 항이 있는 경우, 일반항에 비슷한 꼴의 특수해를 추가
-
+<br>
+<br>
 
 
 # 특성 방정식을 이용한 재귀식 풀이 
@@ -27,12 +19,9 @@ sidebar:
 
 
 **[ 예시 ]**<br>
-
-피보나치 수열의 재귀식 (Fibonacci sequence recurrence equation)
-$t_n = t_{n-1} = t_{n-2}$<br>
-$t_0 = 0$, $t_1 = 1$
-
-동차 선형 재귀식 형태로 표현: $t_n - t_{n-1} - t_{n-2} = 0$
+피보나치 수열의 재귀식 => 동차 선형 재귀식 형태로<br>
+$t_n = t_{n-1} = t_{n-2}$, $t_0 = 0$, $t_1 = 1$<br>
+=> $t_n - t_{n-1} - t_{n-2} = 0$
 
 
 
@@ -45,41 +34,11 @@ $t_0 = 0$, $t_1 = 1$
 |**해**|$r = 0$, $r = 3$, $r = 2$|
 |**결론**|$t_n = 0$, $t_n = 3^n$,$t_n = 2^n$|
 |**검증**|$t_n = 3^n$,$t_{n-1} = 3^{n-1}$,$t_{n-2} = 3^{n-2}$<br>$t_n - 5t_{n-1} + 6t_{n-2}$<br>$3^n - 5(3^{n-1}) + 6(3^{n-2}) = 3^n - 3(3^{n-1}) = 3^n - 3^n = 0$<br>$t_n = 2^n$가 해인지도 확인함|
-
-**일반해 (General Solution)**  
-$t_n = 0$, $t_n = 3^n$, $t_n = 2^n$이 해이므로 **재귀식의 일반해는 다음과 같음**<br>
-$t_n = c_1 3^n + c_2 2^n$(단, $c_1$, $c_2$는 임의의 상수)<br>
-$c_1 = c_2 = 0$일 경우, $t_n = 0$<br>
-
-일반해를 완성하려면 **초기 조건을 대입하여 $c_1, c_2$** 를 결정<br>
-
-**초기 조건** $t_0 = 0$,$t_1 = 1$
-
-**식 정리**:  
-$t_0 = c_1 3^0 + c_2 2^0 = c_1 + c_2 = 0$
-$t_1 = c_1 3^1 + c_2 2^1 = 3c_1 + 2c_2 = 1$
-
-**정리 (Simplifying)**:
-$c_1 + c_2 = 0$
-$3c_1 + 2c_2 = 1$
-
-
-$c_1$, $c_2$를 구해서 일반해를 완성하기 위해 **초기 조건을 사용**
-
-결론적으로:$c_1 = 1$, $c_2 = -1$
-
-$t_n = 1 \cdot (3^n) - 1 \cdot (2^n) = 3^n - 2^n$
-
-
-다른 초기 조건 사용 시<br>
-$t_0 = 1,\quad t_1 = 2$<br>
-$t_0 = c_1 3^0 + c_2 2^0 = 1$<br>
-$t_1 = c_1 3^1 + c_2 2^1 = 2$<br>
-$c_1 + c_2 = 1$<br>
-$3c_1 + 2c_2 = 2$<br>
-$c_1 = 0,\quad c_2 = 1$<br>
-
-$t_n = 0 \cdot (3^n) + 1 \cdot (2^n) = 2^n$
+|**일반해 (General Solution)**|$t_n = 0$, $t_n = 3^n$, $t_n = 2^n$이 해이므로 **재귀식의 일반해는 다음과 같음**<br>$t_n = c_1 3^n + c_2 2^n$(단, $c_1$, $c_2$는 임의의 상수)<br>$c_1 = c_2 = 0$일 경우, $t_n = 0$<br>일반해를 완성하려면 **초기 조건을 대입하여 $c_1, c_2$** 를 결정<br>**초기 조건** $t_0 = 0$,$t_1 = 1$|
+|**식 정리**|$t_0 = c_1 3^0 + c_2 2^0 = c_1 + c_2 = 0$<br>$t_1 = c_1 3^1 + c_2 2^1 = 3c_1 + 2c_2 = 1$<br>$c_1 + c_2 = 0$, $3c_1 + 2c_2 = 1$|
+|**초기 조건을 사용**|$c_1$, $c_2$를 구해서 일반해를 완성하기 위해|
+|결론적으로|$c_1 = 1$, $c_2 = -1$<br>$t_n = 1 \cdot (3^n) - 1 \cdot (2^n) = 3^n - 2^n$|
+|다른 초기 조건 사용 시|$t_0 = 1,\quad t_1 = 2$<br>$t_0 = c_1 3^0 + c_2 2^0 = 1$<br>$t_1 = c_1 3^1 + c_2 2^1 = 2$<br>$c_1 + c_2 = 1$<br>$3c_1 + 2c_2 = 2$<br>$c_1 = 0,\quad c_2 = 1$<br>$t_n = 0 \cdot (3^n) + 1 \cdot (2^n) = 2^n$|
 
 
 
@@ -107,8 +66,7 @@ $(r - 1)(r - 2)^3 = 0$: $r = 2$가 세 번 중복되므로 중복도는 3
 
 
 
-**[ 예제1 ]** 
-
+**[ 예제1 ]** <br>
 중복도를 가진 특성 방정식을 사용한 점화식 풀이
 
 |단계|내용|
@@ -121,6 +79,7 @@ $(r - 1)(r - 2)^3 = 0$: $r = 2$가 세 번 중복되므로 중복도는 3
 |해|$c_1 = -1, \quad c_2 = 1, \quad c_3 = -\frac{1}{3}$|
 |최종 일반해|$t_n = (-1)(1^n) + (1)(3^n) + \left(-\frac{1}{3}\right)(n \cdot 3^n)$<br>$= -1 + 3^n - n \cdot 3^n \cdot \frac{1}{3} = -1 + 3^n - n \cdot 3^{n-1}$
 
+<br>
 
 **[ 예제2: 중복도를 가진 특성 방정식을 사용한 점화식 풀이 ]**
 
@@ -142,13 +101,10 @@ $(r - 1)(r - 2)^3 = 0$: $r = 2$가 세 번 중복되므로 중복도는 3
 
 
 ## 비동차 선형 점화식 예제
+> $t_n - 3t_{n-1} = 4^n (8n + 7) \quad \Rightarrow \quad k = 1, \, b = 4, \, p(n) = 8n + 7$
 
 
-$t_n - 3t_{n-1} = 4^n (8n + 7) \quad \Rightarrow \quad k = 1, \, b = 4, \, p(n) = 8n + 7$
-
-
-**[ 예제 1 ]**
-
+**[ 예제 1 ]**<br>
 $t_n - 3t_{n-1} = 4^n \Rightarrow  k = 1, \, b = 4, \, p(n) = 1$<br>
 $t_n - 3t_{n-1} = 4^n(n > 1), t_0 = 0, t_1 = 4$
 
@@ -163,29 +119,24 @@ $t_n - 3t_{n-1} = 4^n(n > 1), t_0 = 0, t_1 = 4$
 |해의 초기 조건 적용|$t_0 = 0$, $t_1 = 4$<br>$t_n = 4^{n+1} - 4 \cdot 3^n$|
 
 **[ 주의 사항 (Notice) ]**
-
-$t_n = c_1 \cdot 3^n + c_2 \cdot 4^n$
-
-- 파란 상자 부분 $c_1 \cdot 3^n$: 동차 점화식의 특성 방정식에서 유도된 항
-- 빨간 상자 부분 $c_2 \cdot 4^n$: 비동차 항 $4^n$에서 유도된 항
+> $t_n = c_1 \cdot 3^n + c_2 \cdot 4^n$
+• 파란 상자 부분 $c_1 \cdot 3^n$: 동차 점화식의 특성 방정식에서 유도된 항<br>
+• 빨간 상자 부분 $c_2 \cdot 4^n$: 비동차 항 $4^n$에서 유도된 항
 
 
 
-**[ 다항식 $p(n)$의 차수 ]**
+**[ 다항식 $p(n)$의 차수 ]**:  다항식 \( p(n) \)의 차수는 \( n \)의 최고차항이다.
 
-- 다항식 \( p(n) \)의 차수는 \( n \)의 최고차항이다.
-
-| Polynomial \( p(n) \)           | Degree |
+| Polynomial $p(n)$        | Degree |
 |-------------------------------|--------|
-| \( 3n^2 + 4n - 2 \)            | 2      |
-| \( 5n + 7 \)                   | 1      |
-| \( 8 \)                        | 0      |
+| $3n^2 + 4n - 2$         | 2      |
+| $5n + 7$                 | 1      |
+| $8$                        | 0      |
 
 <br>
 
 **[ 비동차 점화식 예제 2 풀이 ]**
-
-$t_n - 3t_{n-1} = 4^n (2n + 1) \quad \text{for } n > 1$
+> $t_n - 3t_{n-1} = 4^n (2n + 1) \quad \text{for } n > 1$
 $t_0 = 0, \quad t_1 = 12$
 
 |단계|설명|
@@ -203,8 +154,7 @@ $t_0 = 0, \quad t_1 = 12$
 <br>
 
 **[ 비동차 선형 점화식 예제 3 풀이 ]**
-
-$t_n - t_{n-1} = n - 1 \quad (n > 0), \quad t_0 = 0$
+> $t_n - t_{n-1} = n - 1 \quad (n > 0), \quad t_0 = 0$
 
 |단계|설명|
 |:---:|---|
@@ -221,8 +171,7 @@ $t_n - t_{n-1} = n - 1 \quad (n > 0), \quad t_0 = 0$
 <br>
 
 **[ 비동차 선형 점화식 예제 4 풀이 ]**
-
-$t_n - 2t_{n-1} = n + 2^n \quad (n > 1), \quad t_1 = 0$
+> $t_n - 2t_{n-1} = n + 2^n \quad (n > 1), \quad t_1 = 0$
 
 |단계|설명|
 |:---:|---|
@@ -240,8 +189,7 @@ $t_n - 2t_{n-1} = n + 2^n \quad (n > 1), \quad t_1 = 0$
 ## 변수 치환을 이용한 점화식 풀이 
 
 **[ 예제 1 ]**
-
-$T(n) = T\left(\frac{n}{2}\right) + 1$ (단, $n > 1$, $n$은 $2$의 거듭제곱), $T(1) = 1$
+> $T(n) = T\left(\frac{n}{2}\right) + 1$ (단, $n > 1$, $n$은 $2$의 거듭제곱), $T(1) = 1$
 
 |단계|설명|
 |:---:|---|
@@ -254,9 +202,7 @@ $T(n) = T\left(\frac{n}{2}\right) + 1$ (단, $n > 1$, $n$은 $2$의 거듭제곱
 
 
 **[ 예제 2 ]**
-
-$T(n) = 7T\left(\frac{n}{2}\right) + 18\left(\frac{n}{2}\right)^2, \quad T(1) = 0$
-
+> $T(n) = 7T\left(\frac{n}{2}\right) + 18\left(\frac{n}{2}\right)^2, \quad T(1) = 0$<br>
 $n = 2^k \Rightarrow k = \log_2 n$
 
 |단계|설명|
@@ -272,8 +218,7 @@ $n = 2^k \Rightarrow k = \log_2 n$
 ## Substitution(대입법)을 이용한 재귀식 풀이 
 
 **[ 예제 1 ]**
-
-$t_n = t_{n-1} + n \quad \text{(for } n > 1) t_1 = 1$
+> $t_n = t_{n-1} + n \quad \text{(for } n > 1) t_1 = 1$
 
 
 |단계|설명|
@@ -284,8 +229,7 @@ $t_n = t_{n-1} + n \quad \text{(for } n > 1) t_1 = 1$
 
 
 **[ 예제 2 ]**
-
-$t_n = t_{n-1} + \frac{2}{n} (n > 1), t_1 = 0$
+> $t_n = t_{n-1} + \frac{2}{n} (n > 1), t_1 = 0$
 
 |단계|설명|
 |:---:|---|
