--- a/_posts/develop/ds_ai/2025-03-24-al5-2.md
+++ b/_posts/develop/ds_ai/2025-03-24-al5-2.md
@@ -238,7 +238,7 @@ $n = 2^k \Rightarrow k = \log_2 n$
 
 
 
-## 시간 복잡도
+# 시간 복잡도
 n이 어떤 양의 상수 b의 거듭제곱일 때의 결과를 일반적인 n으로 확장하기
 
 **[ 네 가지 시간 복잡도 함수 ]**
@@ -336,8 +336,8 @@ $T\left(\left\lfloor \frac{n}{2} \right\rfloor\right) \leq T\left(\left\lfloor \
 
 
 
-### ✅ Master Theorem
-
+# Master Theorem
+## Master Theorem
 복잡도 함수 $T(n)$이 결국 비감소 함수이고 다음을 만족한다고 가정하자:
 $T(n) = aT\left(\frac{n}{b}\right) + cn^k \quad \text{(단, } n > 1, n \text{은 } b \text{의 거듭제곱)}$
 $T(1) = d$
@@ -363,7 +363,7 @@ $$
 T(n) \leq aT\left(\frac{n}{b}\right) + cn^k \quad \text{또는} \quad T(n) \geq aT\left(\frac{n}{b}\right) + cn^k
 $$
 
-그렇다면 결과 B.5는 각각 "빅 O" 또는 \( \Omega \)를 사용하여 성립하며, \( \Theta \)는 대체된다.
+그렇다면 결과 B.5는 각각 "빅 O" 또는 $\Omega$를 사용하여 성립하며, $\Theta$는 대체
 
 ---
 
@@ -383,18 +383,14 @@ $T(1) = 7$
 
 ---
 
-### ✅ Extended Theorem
+## Extended Theorem
 
-복잡도 함수 \( T(n) \)이 결국 비감소 함수이고 다음을 만족한다고 가정하자:
+복잡도 함수 $T(n)$이 결국 비감소 함수이고 다음을 만족한다고 가정하자:
 
-\[
-T(n) = aT(n/b) + cn^k \quad \text{(단, } n > 2, n \text{은 } b \text{의 거듭제곱)}  
-\]  
-\[
-T(s) = d
-\]
+$T(n) = aT(n/b) + cn^k \quad \text{(단, } n > 2, n \text{은 } b \text{의 거듭제곱)}  $<br>
+$T(s) = d$
 
-여기서 \( s \)는 \( b \)의 거듭제곱인 상수이고, \( b \geq 2 \), \( k \geq 0 \)은 정수 상수이며, \( a, c, d \)는 \( a > 0, c > 0, d \geq 0 \)인 상수이다. 그러면 정리 B.5의 결과가 여전히 성립한다.
+여기서 $s$는 $b$의 거듭제곱인 상수이고, $b \geq 2$, $k \geq 0$은 정수 상수이며, $a, c, d$는 $a > 0, c > 0, d \geq 0$인 상수이다. 그러면 정리 B.5의 결과가 여전히 성립한다.
 
 **[ Example 1 (Extended Theorem) ]**
 > $T(n)$이 결국 비감소 함수이고 다음을 만족한다고 가정하자:<br>
@@ -406,8 +402,7 @@ $T(64) = 200$<br>
 <br>
 <br>
 
-## Strassen’s Matrix Multiplication
-
+# Strassen’s Matrix Multiplication
 > 행렬 곱셈에서 곱셈의 수에 대한 시간 복잡도는 $T(n) = n^3$으로 주어지며, 여기서 $n$은 행과 열의 수
 
 
