--- a/_posts/develop/ds_ai/2025-03-23-al5.md
+++ b/_posts/develop/ds_ai/2025-03-23-al5.md
@@ -277,6 +277,9 @@ void merge2(index low, index mid, index high) {
 **[ 예시 ]**
 
 ```c
+//배열을 분할: 피벗 항목보다 작은 모든 항목은 왼쪽에, 큰 항목은 오른쪽에 오도록 배열을 나눈다
+//서브 배열 정렬
+
     [15 22 13 27 12 10 20 25]
             /         |         \
     [10 13 12]     [15]    [22 27 20 25]
@@ -439,7 +442,7 @@ t₃ = t₂ + 1 = 2 + 1 = 3
 |용어|설명|
 |:---:|---|
 |재귀식|어떤 수열의 다음 항이 이전 항들에 의해 정의되는 식|
-|선형(Linear)|미지수가 곱해지지 않고, 제곱(제곱근) 같은 비선형 연산이 없고, 각 항이 1차식으로 되어있는 경우|
+|선형(Linear)|미지수가 곱해지지 않고, 제곱(제곱근) 같은 비선형 연산이 없고, 각 항이 1차식으로 되어있는 경우<br>허용되지 않음: $t^_{n-i}, t_{n-i}t_{n-j}$<br>c가 1이 아닌 양의 상수일 때, 이것도 안 됨: $t_c{n-i}$|
 |동차(Homogeneous)|등식의 오른쪽에 독립된 항(=외부에서 들어온 값, 상수나 함수)이 없다<br> • 동차: $a_n = 2a_{n-1} +  3a_{n-2}$<br> • 비동차: $a_n = 2a_{n-1} + 5$|
 |상수계수(Equations with Constant Coefficient)|항 앞의 계수가 변하지 않는 상수|
 |영 함수 (Zero function)|$f(n) = 0$|
@@ -456,7 +459,7 @@ t₃ = t₂ + 1 = 2 + 1 = 3
 |**동차(동질) 재귀식**<br>**(Homogeneous Recurrence)**|재귀식의 오른쪽이 항들의 조합으로만 이루어져 있고, 독립된 상수항이 없는 경우|
 |**비동차(비동질) 재귀식**<br>**(Nonhomogeneous Recurrence)**|오른쪽에 독립된 항 존재|
 |**선형 동차 상수 계수 재귀식**|이전 항들의 선형 결합 + 계수가 상수 + 동차|
-|**선형 동차 재귀식**|각 항이 선형으로 나타나고, 상수항이 없고, 이전 항들의 조합으로 구성된 식|
+|**선형 동차 재귀식**|각 항이 선형으로 나타나고, 상수항이 없고, 이전 항들의 조합으로 구성된 식<br>$a_bt_n + a_1t_{n-1} + ... + a_Kt_{n-k} = 0$<br>$k$와 $a_i$는 상수|
 |**동차 선형 상수 계수 재귀식**|$7t_n - 3t_{n-1} = 0$<br>$6t_n - 5t_{n-1} + 8t_{n-2} = 0$<br>$8t_n - 4t_{n-3} = 0$|
 |**비동차 선형 재귀식**|각 항이 선형으로 나타나며, 오른쪽에 독립된 항(상수나 함수)이 존재하는 재귀식|
 |**상수 계수를 갖는 비동차 선형 재귀식**|nonhomogeneous linear recurrence equation with constant coefficients<br>다음 형태의 점화식 $a_0 t_n + a_1 t_{n-1} + \cdots + a_k t_{n-k} = f(n)$<br>에서 $k$와 $a_i$들은 상수이고 $f(n)$은 0이 아닌 어떤 함수|
