--- a/_posts/develop/ds_ai/2025-03-24-al5-2.md
+++ b/_posts/develop/ds_ai/2025-03-24-al5-2.md
@@ -14,7 +14,7 @@ sidebar:
 <br>
 
 
-# 특성 방정식을 이용한 재귀식 풀이 
+# 동차 선형 재귀식 풀이
 > Solving Recurrences Using the Characteristic Equation
 
 
@@ -29,20 +29,45 @@ $t_n = t_{n-1} = t_{n-2}$, $t_0 = 0$, $t_1 = 1$<br>
 
 |단계|내용|
 |:---:|---|
-|**주어진 재귀식**|$t_n - 5t_{n-1} + 6t_{n-2} = 0$ for $n > 1$<br>$t_0 = 0, t_1 = 1$|
-|**가정**|$t_n = r^n$<br>$t_n - 5t_{n-1} + 6t_{n-2} = r^n - 5r^{n-1} + 6r^{n-2} = 0$<br>$r^n - 5r^{n-1} + 6r^{n-2} = 0 \Rightarrow r^{n-2}(r^2 - 5r + 6) = 0$|
-|**해**|$r = 0$, $r = 3$, $r = 2$|
+|**주어진 재귀식**|$t_n - 5t_{n-1} + 6t_{n-2} = 0$<br>for $n > 1$<br>$t_0 = 0, t_1 = 1$|
+|**가정**|$t_n = r^n$|
+|**해**|$t_n - 5t_{n-1} + 6t_{n-2} = r^n - 5r^{n-1} + 6r^{n-2} = 0$<br>$r^n - 5r^{n-1} + 6r^{n-2} = 0 \Rightarrow r^{n-2}(r^2 - 5r + 6) = 0$<br>$r = 0$, $r = 3$, $r = 2$|
 |**결론**|$t_n = 0$, $t_n = 3^n$,$t_n = 2^n$|
-|**검증**|$t_n = 3^n$,$t_{n-1} = 3^{n-1}$,$t_{n-2} = 3^{n-2}$<br>$t_n - 5t_{n-1} + 6t_{n-2}$<br>$3^n - 5(3^{n-1}) + 6(3^{n-2}) = 3^n - 3(3^{n-1}) = 3^n - 3^n = 0$<br>$t_n = 2^n$가 해인지도 확인함|
+|**검증**|$t_n = 3^n$, $t_{n-1} = 3^{n-1}$, $t_{n-2} = 3^{n-2}$<br>$t_n - 5t_{n-1} + 6t_{n-2}$<br>$3^n - 5(3^{n-1}) + 6(3^{n-2}) = 3^n - 3(3^{n-1}) = 3^n - 3^n = 0$<br>$t_n = 2^n$가 해인지도 확인함|
 |**일반해 (General Solution)**|$t_n = 0$, $t_n = 3^n$, $t_n = 2^n$이 해이므로 **재귀식의 일반해는 다음과 같음**<br>$t_n = c_1 3^n + c_2 2^n$(단, $c_1$, $c_2$는 임의의 상수)<br>$c_1 = c_2 = 0$일 경우, $t_n = 0$<br>일반해를 완성하려면 **초기 조건을 대입하여 $c_1, c_2$** 를 결정<br>**초기 조건** $t_0 = 0$,$t_1 = 1$|
 |**식 정리**|$t_0 = c_1 3^0 + c_2 2^0 = c_1 + c_2 = 0$<br>$t_1 = c_1 3^1 + c_2 2^1 = 3c_1 + 2c_2 = 1$<br>$c_1 + c_2 = 0$, $3c_1 + 2c_2 = 1$|
 |**초기 조건을 사용**|$c_1$, $c_2$를 구해서 일반해를 완성하기 위해|
 |결론적으로|$c_1 = 1$, $c_2 = -1$<br>$t_n = 1 \cdot (3^n) - 1 \cdot (2^n) = 3^n - 2^n$|
 |다른 초기 조건 사용 시|$t_0 = 1,\quad t_1 = 2$<br>$t_0 = c_1 3^0 + c_2 2^0 = 1$<br>$t_1 = c_1 3^1 + c_2 2^1 = 2$<br>$c_1 + c_2 = 1$<br>$3c_1 + 2c_2 = 2$<br>$c_1 = 0,\quad c_2 = 1$<br>$t_n = 0 \cdot (3^n) + 1 \cdot (2^n) = 2^n$|
 
+<br>
 
+**[ 특성 방정식을 이용한 재귀식 풀이 – 예제 1 ]**
+> 점화식의 특성 방정식<br>
+• 점화식: $5t_n - 7t_{n-1} + 6t_{n-2} = 0$<br>
+• 특성 방정식: $5r^2 - 7r + 6 = 0$
+
+|단계|내용|
+|---|---|
+|초기 조건|$t_0 = 0,\quad t_1 = 1$|
+|특성 방정식 도출|점화식: $t_n - 3t_{n-1} - 4t_{n-2} = 0$<br>특성 방정식: $r^2 - 3r - 4 = 0$|
+|특성 방정식 풀기|$r^2 - 3r - 4 = (r - 4)(r + 1) = 0$<br>r = 4,\quad r = -1|
+|일반해 구하기 (정리 B.1에 의한)|$t_n = c_1 \cdot 4^n + c_2 \cdot (-1)^n$|
+|초기 조건을 이용해 상수 $c_1$, $c_2$ 구하기|초기 조건: <br>$t_0 = 0 = c_1 \cdot 4^0 + c_2 \cdot (-1)^0 = c_1 + c_2$<br>$t_1 = 1 = c_1 \cdot 4^1 + c_2 \cdot (-1)^1 = 4c_1 - c_2$|
+|연립방정식 정리| $c_1 + c_2 = 0$<br> $4c_1 - c_2 = 1$|
+|해|$c_1 = \frac{1}{5},\quad c_2 = -\frac{1}{5}$|
+|결론|일반해 $t_n = \frac{1}{5} \cdot 4^n - \frac{1}{5} \cdot (-1)^n$
+
+
+
+
+<br>
 
 **[ 특성 방정식을 이용한 재귀식 풀이 – 예제 2 ]**
+> 상수계수를 가지는 동차 선형 점화식의 특성방정식은 다음과 같이 정의됨<br>
+• 점화식: $a_0t_n + a_1t_{n-1} + ... + a_kt_{n-k} = 0$<br>
+• 대응되는 특성 방정식: $a_0r^k + a_1r^k-1 + ... + a_kr^0 = 0$<br>
+• $r^1 = 1$
 
 |단계|내용|
 |:---:|---|
@@ -71,10 +96,10 @@ $(r - 1)(r - 2)^3 = 0$: $r = 2$가 세 번 중복되므로 중복도는 3
 
 |단계|내용|
 |:---:|---|
-|특성 방정식 도출하기|점화식: $t_n - 7t_{n-1} + 15t_{n-2} - 9t_{n-3} = 0 \quad (n > 2)$<br>$t_0 = 0, \quad t_1 = 1, \quad t_2 = 2$<ㅠ특성 방정식: $r^3 - 7r^2 + 15r - 9 = 0$|
+|특성 방정식 도출하기|점화식: $t_n - 7t_{n-1} + 15t_{n-2} - 9t_{n-3} = 0 \quad (n > 2)$<br>$t_0 = 0, \quad t_1 = 1, \quad t_2 = 2$<br>특성 방정식: $r^3 - 7r^2 + 15r - 9 = 0$|
 |특성 방정식 풀기|$r^3 - 7r^2 + 15r - 9 = (r - 1)(r - 3)^2 = 0$<br>중복도: $r = 1$(단일근), $r = 3$(중복도 2의 중근)<br>해의 형태: $t_n = c_1 \cdot 1^n + c_2 \cdot 3^n + c_3 \cdot n \cdot 3^n$|
 |정리 B.1에 따라 일반해 구하기|$t_n = c_1 \cdot 1^n + c_2 \cdot 3^n + c_3 \cdot n \cdot 3^n$|
-|초기 조건으로 상수 $c_1, c_2, c_3$구하기|초기 조건:$t_0 = 0 = c_1 \cdot 1^0 + c_2 \cdot 3^0 + c_3 \cdot (0) \cdot (3^0)$<br>$t_1 = 1 = c_1 \cdot 1^1 + c_2 \cdot 3^1 + c_3 \cdot (1) \cdot (3^1)$<br>$t_2 = 2 = c_1 \cdot 1^2 + c_2 \cdot 3^2 + c_3 \cdot (2) \cdot (3^2)$|
+|초기 조건으로 상수 $c_1, c_2, c_3$구하기|초기 조건:<br>$t_0 = 0 = c_1 \cdot 1^0 + c_2 \cdot 3^0 + c_3 \cdot (0) \cdot (3^0)$<br>$t_1 = 1 = c_1 \cdot 1^1 + c_2 \cdot 3^1 + c_3 \cdot (1) \cdot (3^1)$<br>$t_2 = 2 = c_1 \cdot 1^2 + c_2 \cdot 3^2 + c_3 \cdot (2) \cdot (3^2)$|
 |식 정리|$c_1 + c_2 = 0$<br>$c_1 + 3c_2 + 3c_3 = 1$<br>$c_1 + 9c_2 + 18c_3 = 2$|
 |해|$c_1 = -1, \quad c_2 = 1, \quad c_3 = -\frac{1}{3}$|
 |최종 일반해|$t_n = (-1)(1^n) + (1)(3^n) + \left(-\frac{1}{3}\right)(n \cdot 3^n)$<br>$= -1 + 3^n - n \cdot 3^n \cdot \frac{1}{3} = -1 + 3^n - n \cdot 3^{n-1}$
@@ -89,7 +114,7 @@ $(r - 1)(r - 2)^3 = 0$: $r = 2$가 세 번 중복되므로 중복도는 3
 |특성 방정식 도출하기|$t_n - 5t_{n-1} + 7t_{n-2} - 3t_{n-3} = 0$<br>$\Rightarrow r^3 - 5r^2 + 7r - 3 = 0$|
 |특성 방정식 풀기|$r^3 - 5r^2 + 7r - 3 = (r - 3)(r - 1)^2 = 0$<br>중복도: $r = 3$(단일근), $r = 1$(중복도 2의 중근)|
 |정리 B.1에 따라 일반해 구하기|$t_n = c_1 \cdot 3^n + c_2 \cdot 1^n + c_3 \cdot n \cdot 1^n$|
-|초기 조건으로 상수 $c_1, c_2, c_3$ 구하기|초기 조건: $t_0 = 1 = c_1 \cdot 3^0 + c_2 \cdot 1^0 + c_3 \cdot 0 \cdot 1^0$<br>$t_1 = 2 = c_1 \cdot 3^1 + c_2 \cdot 1^1 + c_3 \cdot 1 \cdot 1^1$<br>$t_2 = 3 = c_1 \cdot 3^2 + c_2 \cdot 1^2 + c_3 \cdot 2 \cdot 1^2$|
+|초기 조건으로 상수 $c_1, c_2, c_3$ 구하기|초기 조건: <br>$t_0 = 1 = c_1 \cdot 3^0 + c_2 \cdot 1^0 + c_3 \cdot 0 \cdot 1^0$<br>$t_1 = 2 = c_1 \cdot 3^1 + c_2 \cdot 1^1 + c_3 \cdot 1 \cdot 1^1$<br>$t_2 = 3 = c_1 \cdot 3^2 + c_2 \cdot 1^2 + c_3 \cdot 2 \cdot 1^2$|
 |위 식 정리|$c_1 + c_2 = 1$<br>$3c_1 + c_2 + c_3 = 2$<br>$9c_1 + c_2 + 2c_3 = 3$|
 |해|$c_1 = 0, \quad c_2 = 1, \quad c_3 = 1$|
 |최종 일반해|$t_n = 0 \cdot 3^n + 1 \cdot 1^n + 1 \cdot n \cdot 1^n = 1 + n$|
@@ -100,7 +125,18 @@ $(r - 1)(r - 2)^3 = 0$: $r = 2$가 세 번 중복되므로 중복도는 3
 
 
 
-## 비동차 선형 점화식 예제
+# 비동차 선형 점화식 (Nonhomogeneous Linear Recurrences)
+
+**[ 정의 (Definition) ]**  
+> 다음과 같은 형태의 점화식
+$a_0 t_n + a_1 t_{n-1} + \cdots + a_k t_{n-k} = f(n)$
+에서, $k$와 $a_i$들은 상수이고 $f(n)$은 0이 아닌 어떤 함수일 때,  
+이를 **상수 계수를 갖는 비동차 선형 점화식 (nonhomogeneous linear recurrence equation with constant coefficients)** 
+• **영 함수(zero function)**의 경우: \(f(n) = 0\)
+• **비동차 점화식을 일반적으로 푸는 공식적인 방법은 존재하지 않음**
+• **하지만, 아래와 같은 일반적인 특수한 경우에는 풀이법이 있음**:
+$a_0 t_n + a_1 t_{n-1} + \cdots + a_k t_{n-k} = b^n p(n)$
+$b$는 상수이며 $p(n)$은 $n$에 대한 다항식(polynomial)
 > $t_n - 3t_{n-1} = 4^n (8n + 7) \quad \Rightarrow \quad k = 1, \, b = 4, \, p(n) = 8n + 7$
 
 
@@ -118,10 +154,10 @@ $t_n - 3t_{n-1} = 4^n(n > 1), t_0 = 0, t_1 = 4$
 |일반해|$t_n = c_1 \cdot 3^n + c_2 \cdot 4^n$|
 |해의 초기 조건 적용|$t_0 = 0$, $t_1 = 4$<br>$t_n = 4^{n+1} - 4 \cdot 3^n$|
 
-**[ 주의 사항 (Notice) ]**
-> $t_n = c_1 \cdot 3^n + c_2 \cdot 4^n$
-• 파란 상자 부분 $c_1 \cdot 3^n$: 동차 점화식의 특성 방정식에서 유도된 항<br>
-• 빨간 상자 부분 $c_2 \cdot 4^n$: 비동차 항 $4^n$에서 유도된 항
+**[ 주의 사항 (Notice) ]**<br>
+> $t_n = c_1 \cdot 3^n + c_2 \cdot 4^n$<br>
+• $c_1 \cdot 3^n$: 동차 점화식의 특성 방정식에서 유도된 항<br>
+• $c_2 \cdot 4^n$: 비동차 항 $4^n$에서 유도된 항
 
 
 
@@ -161,8 +197,7 @@ $t_0 = 0, \quad t_1 = 12$
 |동차식에서 유도한 특성 방정식|$t_n - t_{n-1} = 0 \Rightarrow r^1 - 1 = 0$|
 |비동차 항에서 유도된 항|$(r - 1)^{1+1}$|
 |오른쪽 항 $n - 1 = 1^n(n^1 - 1)$ 로부터|$b = 1, d = 1$|
-|두 항을 곱하여 얻는 특성 방정식|$(r - 1)(r - 1)^2 = (r - 1)^3$|
-|$r = 1$의 중복도 3 해를 갖는 방정식||
+|두 항을 곱하여 얻는 특성 방정식|$(r - 1)(r - 1)^2 = (r - 1)^3$<br>$r = 1$의 중복도 3 해를 갖는 방정식|
 |정리 B.2에 따라 일반해는|$t_n = c_1 \cdot 1^n + c_2 n \cdot 1^n + c_3 n^2 \cdot 1^n = c_1 + c_2 n + c_3 n^2$|
 |두 개의 추가 초기 조건 계산|$t_1 = t_0 + 1 - 1 = 0 + 0 = 0$<br>$t_2 = t_1 + 2 - 1 = 0 + 1 = 1$|
 |초기 조건을 사용하여 일반해 완성|$t_n = \frac{n(n-1)}{2}$|
