--- a/_posts/develop/ds_ai/2025-03-23-al5.md
+++ b/_posts/develop/ds_ai/2025-03-23-al5.md
@@ -442,7 +442,7 @@ t₃ = t₂ + 1 = 2 + 1 = 3
 |용어|설명|
 |:---:|---|
 |재귀식|어떤 수열의 다음 항이 이전 항들에 의해 정의되는 식|
-|선형(Linear)|미지수가 곱해지지 않고, 제곱(제곱근) 같은 비선형 연산이 없고, 각 항이 1차식으로 되어있는 경우<br>허용되지 않음: ${t^2}_{n-i}$, $t_{n-i}t_{n-j}$<br>c가 1이 아닌 양의 상수일 때, 이것도 안 됨: $t_c{n-i}$|
+|선형(Linear)|미지수가 곱해지지 않고, 제곱(제곱근) 같은 비선형 연산이 없고, 각 항이 1차식으로 되어있는 경우<br>허용되지 않음: $t_{n-i}^2$, $t_{n-i}t_{n-j}$<br>c가 1이 아닌 양의 상수일 때, 이것도 안 됨: $t_c{n-i}$|
 |동차(Homogeneous)|등식의 오른쪽에 독립된 항(=외부에서 들어온 값, 상수나 함수)이 없다<br> • 동차: $a_n = 2a_{n-1} +  3a_{n-2}$<br> • 비동차: $a_n = 2a_{n-1} + 5$|
 |상수계수(Equations with Constant Coefficient)|항 앞의 계수가 변하지 않는 상수|
 |영 함수 (Zero function)|$f(n) = 0$|
