--- a/_posts/develop/ds_ai/2025-03-23-al5.md
+++ b/_posts/develop/ds_ai/2025-03-23-al5.md
@@ -527,7 +527,7 @@ t₃ = t₂ + 1 = 2 + 1 = 3
 |**정당성 증명**|$n = 1$ 일 때: $t_1 = 1 = 7^0 = 7^{\log 1}$|
 |**귀납 가정**|$t_n = 7^{\log n}$|
 |**귀납 단계**|$t_{2n} = 7^{\log (2n)}$|
-|**결론**|$t_{2n} = 7t_{(2n)/2} = 7t_n = 7 \times 7^{\log n} = 7^{1 + \log n} = 7^{\log 2 + \log n} = 7^{\log (2n)}$<br>$\therefore t_n = n^{\log 7} \approx n^{2.81}$ (왜냐하면 $7^{\log n} = n^{\log 7}$)
+|**결론**|$t_{2n} = 7t_{(2n)/2} <br>= 7t_n = 7 \times 7^{\log n} = 7^{1 + \log n} <br>= 7^{\log 2 + \log n} = 7^{\log (2n)}$<br>$\therefore t_n = n^{\log 7} \approx n^{2.81}$ (왜냐하면 $7^{\log n} = n^{\log 7}$)
 
 <br>
 
