--- a/_posts/develop/ds_ai/2025-03-24-al5-2.md
+++ b/_posts/develop/ds_ai/2025-03-24-al5-2.md
@@ -51,7 +51,7 @@ $t_n = t_{n-1} = t_{n-2}$, $t_0 = 0$, $t_1 = 1$<br>
 |---|---|
 |초기 조건|$t_0 = 0,\quad t_1 = 1$|
 |특성 방정식 도출|점화식: $t_n - 3t_{n-1} - 4t_{n-2} = 0$<br>특성 방정식: $r^2 - 3r - 4 = 0$|
-|특성 방정식 풀기|$r^2 - 3r - 4 = (r - 4)(r + 1) = 0$<br>r = 4,\quad r = -1$|
+|특성 방정식 풀기|$r^2 - 3r - 4 = (r - 4)(r + 1) = 0$<br>r = 4$,$r = -1$|
 |일반해 구하기 (정리 B.1에 의한)|$t_n = c_1 \cdot 4^n + c_2 \cdot (-1)^n$|
 |초기 조건을 이용해 상수 $c_1$, $c_2$ 구하기|초기 조건: <br>$t_0 = 0 = c_1 \cdot 4^0 + c_2 \cdot (-1)^0 = c_1 + c_2$<br>$t_1 = 1 = c_1 \cdot 4^1 + c_2 \cdot (-1)^1 = 4c_1 - c_2$|
 |연립방정식 정리| $c_1 + c_2 = 0$<br> $4c_1 - c_2 = 1$|
