--- a/_posts/develop/ds_ai/2025-03-24-al5-2.md
+++ b/_posts/develop/ds_ai/2025-03-24-al5-2.md
@@ -155,7 +155,7 @@ $t_n - 3t_{n-1} = 4^n(n > 1), t_0 = 0, t_1 = 4$
 |점화식에서 $n$을 $n - 1$로 치환|$t_{n-1} - 3t_{n-2} = 4^{n-1}$|
 |식을 4로 나눔|$\frac{t_n}{4} - \frac{3t_{n-1}}{4} = 4^{n-1}$|
 |다음 두 식을 빼서 $4^{n-1}$ 항 제거|$\frac{t_n}{4} - \frac{7t_{n-1}}{4} + 3t_{n-2} = 0$|
-|동차 점화식으로 만들기 위해 4를 곱함|t_n - 7t_{n-1} + 12t_{n-2} = 0|
+|동차 점화식으로 만들기 위해 4를 곱함|$t_n - 7t_{n-1} + 12t_{n-2} = 0$|
 |특성 방정식|$t_n = r^n \Rightarrow r^2 - 7r + 12 = (r - 3)(r - 4) = 0$|
 |일반해|$t_n = c_1 \cdot 3^n + c_2 \cdot 4^n$|
 |해의 초기 조건 적용|$t_0 = 0$, $t_1 = 4$<br>$t_n = 4^{n+1} - 4 \cdot 3^n$|
