--- a/_posts/develop/ds_ai/2025-03-24-al5-2.md
+++ b/_posts/develop/ds_ai/2025-03-24-al5-2.md
@@ -204,7 +204,7 @@ $t_0 = 0, \quad t_1 = 12$
 |비동차 항에서 유도된 항|$(r - 1)^{1+1}$|
 |오른쪽 항 $n - 1 = 1^n(n^1 - 1)$ 로부터|$b = 1, d = 1$|
 |두 항을 곱하여 얻는 특성 방정식|$(r - 1)(r - 1)^2 = (r - 1)^3$<br>$r = 1$의 중복도 3 해를 갖는 방정식|
-|정리 B.2에 따라 일반해는|$t_n = c_1 \cdot 1^n + c_2 n \cdot 1^n + c_3 n^2 \cdot 1^n = c_1 + c_2 n + c_3 n^2$|
+|정리 B.2에 따라 일반해는|$t_n = c_1 \cdot 1^n + c_2 n \cdot 1^n + c_3 n^2 \cdot 1^n$<br> $= c_1 + c_2 n + c_3 n^2$|
 |두 개의 추가 초기 조건 계산|$t_1 = t_0 + 1 - 1 = 0 + 0 = 0$<br>$t_2 = t_1 + 2 - 1 = 0 + 1 = 1$|
 |초기 조건을 사용하여 일반해 완성|$t_n = \frac{n(n-1)}{2}$|
 
