--- a/_posts/develop/ds_ai/2025-03-24-al5-2.md
+++ b/_posts/develop/ds_ai/2025-03-24-al5-2.md
@@ -427,7 +427,7 @@ $$<br>
 
 **[ Example 1 (Extended Theorem) ]**
 > $T(n)$이 결국 비감소 함수이고 다음을 만족한다고 가정하자:<br>
-$T(n) = 8T(n/2) + 5n^3 \quad \text{(단, } n > 64, n \text{은 2의 거듭제곱)}$<br>
+$T(n) = 8T(n/2) + 5n^3$ (단, $n > 64$, $n$은 $2$의 거듭제곱)<br>
 $T(64) = 200$<br>
 정리 B.6에 따라, $8 = 2^3$이므로, $T(n) \in \Theta(n^3 \log n)$
 
