--- a/_posts/develop/ds_ai/2025-03-25-al6.md
+++ b/_posts/develop/ds_ai/2025-03-25-al6.md
@@ -251,9 +251,9 @@ void prim (int n,
 
 **[ 주요연산 ]**<br>
 `makeset`<br>
-• Universal Set: $U = \lbrace A, B, C, D, E \rbrace$-> Sub set: $\lbrace a \rbrace$, $\lbrace b \rbrace$ ...<br>
-각 원소 x를 자기 자신만 포함하는 하나의 독립 집합으로 초기화
-`for (each x ∈ U) makeset(x)`<br>
+• Universal Set: $U = \lbrace A, B, C, D, E \rbrace$-> Sub set: $\lbrace a \rbrace$, $\lbrace b \rbrace$ ... <br>
+각 원소 x를 자기 자신만 포함하는 하나의 독립 집합으로 초기화<br>
+`for (each x ∈ U) makeset(x)` <br>
 • 트리로 표현하면, 각 노드는 자기 자신을 부모로 가리킴<br>
 `find with set_pointer p or q`<br>
 • 원소 x가 속한 집합의 **대표자(root)** 찾기<br>
