--- a/_posts/develop/ds_ai/2025-03-25-al6.md
+++ b/_posts/develop/ds_ai/2025-03-25-al6.md
@@ -672,7 +672,7 @@ if (no more jobs):
 |구분|내용|
 |:---:|---|
 |가정|• $t_i$: i번째 작업의 서비스 시간 $(1 ≤ i ≤ n−1)$ <br>• 이 작업은 어떤 최적 스케줄(시스템 체류 시간을 최소화하는 스케줄)에서 실행된다고 가정|
-|증명|해당 스케줄이 서비스 시간 기준으로 오름차순이라는 것을 보여야 한다<br>• 만약 작업들이 오름차순으로 정렬되지 않았다면, 적어도 하나의 인덱스 $i$가 존재해서: $t_i > t_{i+1}$<br>• 기존 스케줄에서 i번째 작업과 $(i+1)$번째 작업의 **순서를 바꾼다**: ‣ $(i+1)$번째 작업은 더 일찍 처리되므로 **대기 시간이 줄어들어** 시스템 체류 시간이 $t_i$만큼 **감소** <br>‣ **i번째 작업**은 더 **늦게** 처리되므로 시스템 체류 시간이 $t_{i+1}$만큼 **증가**<br>• 따라서, 전체 시스템 체류 시간은 다음과 같다: $T' = T + t_{i+1} - t_i$|
+|증명|해당 스케줄이 서비스 시간 기준으로 오름차순이라는 것을 보여야 한다<br>• 만약 작업들이 오름차순으로 정렬되지 않았다면, 적어도 하나의 인덱스 $i$가 존재해서: $t_i > t_{i+1}$<br>• 기존 스케줄에서 i번째 작업과 $(i+1)$번째 작업의 **순서를 바꾼다**: <br>‣ $(i+1)$번째 작업은 더 일찍 처리되므로 **대기 시간이 줄어들어** 시스템 체류 시간이 $t_i$만큼 **감소** <br>‣ **i번째 작업**은 더 **늦게** 처리되므로 시스템 체류 시간이 $t_{i+1}$만큼 **증가**<br>• 따라서, 전체 시스템 체류 시간은 다음과 같다: $T' = T + t_{i+1} - t_i$|
 |결론|$t_i > t_{i+1}$ 이므로 → $T' < T$: 원래 스케줄보다 더 나은 스케줄이 존재하게 되어 **모순**<br>따라서, **최적 스케줄은 반드시 서비스 시간이 오름차순인 순서**여야 한다|
 
 
